--- a/arvorealg.tex
+++ b/arvorealg.tex
@@ -9,12 +9,12 @@ decision tree/.style={sibling distance=3cm, level distance=2cm},
 cond/.style={blue, yshift=-2mm, shape=rectangle, text centered},
 }
 \begin{center}
-\caption{Distribuição das estratégias vencedoras de acordo com o algoritmo usado e
-características de cada base.
-\textit{As folhas apresentam a frequência de vitórias das estratégias.
-Uma colocação entre as três melhores é contabilizada como vitória.
-As $25\%$ menos frequentes são representadas pela categoria ``demais''.
-Mínimo de $40$ exemplos por folha.}
+\caption{DistribuiÃ§Ã£o das estratÃ©gias vencedoras de acordo com o algoritmo usado e
+caracterÃ­sticas de cada base.
+\textit{As folhas apresentam a frequÃªncia de vitÃ³rias das estratÃ©gias.
+Uma colocaÃ§Ã£o entre as trÃªs melhores Ã© contabilizada como vitÃ³ria.
+As $25\%$ menos frequentes sÃ£o representadas pela categoria ``demais''.
+MÃ­nimo de $40$ exemplos por folha.}
 }
 \begin{tikzpicture} [edge from parent/.style={->,above,draw,sloped,midway,gray!30,ultra thick},
 text width=2.7cm, align=flush center, grow cyclic,
