--- a/classifsFried.tex
+++ b/classifsFried.tex
@@ -1,5 +1,5 @@
 \begin{table}[h]
-\caption{\textbf{Um contra um}. Medida: Kappa. \textit{Cada asterisco/cruz/ponto indica quando o algoritmo na linha tem melhor desempenho que o algoritmo na coluna com intervalo de confiança de 0.99/0.95/0.90.}}
+\caption{\textbf{Um contra um}. Medida: Kappa. \textit{Cada asterisco/cruz/ponto indica quando o algoritmo na linha tem melhor desempenho que o algoritmo na coluna com intervalo de confianÃ§a de 0.99/0.95/0.90.}}
 \begin{center}\begin{tabular}{lcc|cc|cc|c}
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7\\
 1 - 5NN  	& - &   &   &   &   &   &   \\
