--- a/passiveDists-old.tex
+++ b/passiveDists-old.tex
@@ -1,5 +1,5 @@
 \begin{table}[h]
-\caption{Similaridade entre algoritmos de aprendizado de acordo com a acur·cia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha est· em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,50$ est„o em negrito.}
+\caption{Similaridade entre algoritmos de aprendizado de acordo com a acur√°cia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha est√° em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,50$ est√£o em negrito.}
 \begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|c}
 & \begin{sideways}5NNa\end{sideways} & \begin{sideways}C4.5w\end{sideways} & \begin{sideways}CIELM\end{sideways} & \begin{sideways}ELM\end{sideways} & \begin{sideways}IELM\end{sideways} & \begin{sideways}NB\end{sideways} & \begin{sideways}NBinc\end{sideways} & \begin{sideways}RFw\end{sideways} & \begin{sideways}VFDT\end{sideways} & \begin{sideways}SVM\end{sideways} \\
 5NNa	& - &   0.47 & \textbf{  0.53} &   \textbf{  0.50} &   \textbf{  0.52} &   0.47 &   0.46 & \textcolor{blue}{\textbf{  0.54}} &   0.45 & \textcolor{red}{\textbf{  0.28}} \\
