--- a/passiveDists.tex
+++ b/passiveDists.tex
@@ -1,5 +1,5 @@
 \begin{table}[h]
-\caption{Similaridade entre algoritmos de aprendizado de acordo com a medida kappa para as 94 bases de dados. O maior e o menor valor de cada linha est· em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente.}
+\caption{Similaridade entre algoritmos de aprendizado de acordo com a medida kappa para as 94 bases de dados. O maior e o menor valor de cada linha est√° em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente.}
 \begin{center}\begin{tabular}{lcc|cc|cc|c}
  				& 5NN & C4.5w & CIELM & NB & RFw & SVM & VFDTw \\5NN	& - &   0.37 & \textcolor{blue}{\textbf{  0.42}} &   0.35 &   0.39 &   0.41 & \textcolor{red}{\textbf{  0.32}} \\
 C4.5w	&   0.37 & - &   0.38 &   0.41 &   0.42 & \textcolor{blue}{\textbf{  0.43}} & \textcolor{red}{\textbf{  0.31}} \\ \hline
