--- a/stratDistsRedux.tex
+++ b/stratDistsRedux.tex
@@ -1,5 +1,5 @@
 \begin{table}[h]
-\caption{Similaridade entre estratÈgias de acordo com a acur·cia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha est· em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,50$ est„o em negrito.}
+\caption{Similaridade entre estrat√©gias de acordo com a acur√°cia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha est√° em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,50$ est√£o em negrito.}
 \begin{center}\begin{tabular}{lcc|cc|cc|cc|cc}
  				& Rnd & Clu & \textbf{ATUeuc} & \textbf{GATUeuc} & \textbf{SGmulti} & Mar & DWeuc & TUeuc & EERacu & EERent \\Rnd	& - & \textcolor{blue}{\textbf{  0.63}} & \textbf{  0.59} &   0.43 & \textbf{  0.56} &   0.36 & \textcolor{red}{\textbf{  0.24}} &   0.38 &   0.46 &   0.37 \\
 Clu	& \textcolor{blue}{\textbf{  0.63}} & - & \textbf{  0.59} &   0.47 & \textbf{  0.58} &   0.39 & \textcolor{red}{\textbf{  0.24}} &   0.41 & \textbf{  0.50} &   0.41 \\ \hline
