--- a/stratsALCKappaC4.5wRedux.tex
+++ b/stratsALCKappaC4.5wRedux.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para C4.5w: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para C4.5w: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & DWeuc\\ \hline 1-abalone 3class &   0.32/  0.03 &   0.32/\textcolor{black}{\textbf{  0.02}} &   0.32/  0.03 &   0.33/  0.03 &   0.33/  0.03 &   0.33/  0.03 &   0.33/  0.03 & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.02}} &   0.32/  0.03 &   0.32/  0.03 & \textcolor{red}{\textbf{  0.19}}/  0.05 \\
 2-arcene &   0.30/  0.07 &   0.30/  0.06 &   0.29/  0.06 &   0.30/  0.06 & \textcolor{red}{\textbf{  0.28}}/  0.06 &   0.30/  0.06 &   0.30/  0.06 & \textcolor{red}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.05}} &   0.30/  0.06 & \underline{\textcolor{blue}{\textbf{  0.32}}}/  0.07 &   0.29/\textcolor{black}{\textbf{  0.05}} \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para C4.5w: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para C4.5w: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c}
  & TUeuc & TUman & TUmah\\ \hline 1-abalone 3class & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.02}} &   0.33/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.34}}/  0.03 \\
 2-arcene & \textcolor{black}{\textbf{  0.31}}/  0.07 &   0.30/  0.06 & \textcolor{red}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.05}} \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para C4.5w: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para C4.5w: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & DWeuc\\ \hline 33-leukemia haslinger &   0.36/  0.11 & \textcolor{blue}{\textbf{  0.37}}/  0.11 &   0.35/  0.10 &   0.35/\textcolor{darkgreen}{\textbf{  0.07}} &   0.36/  0.11 &   0.36/  0.09 &   0.35/\textcolor{black}{\textbf{  0.08}} &   0.36/  0.10 &   0.35/  0.12 & \textcolor{red}{\textbf{  0.34}}/  0.14 & \textcolor{blue}{\textbf{  0.37}}/  0.10 \\
 34-mammographic mass &   0.58/\textcolor{black}{\textbf{  0.04}} &   0.58/  0.05 & \textcolor{black}{\textbf{  0.59}}/  0.06 &   0.58/  0.05 &   0.58/  0.05 &   0.58/  0.06 & \textcolor{black}{\textbf{  0.59}}/  0.05 & \underline{\textcolor{blue}{\textbf{  0.60}}}/  0.05 &   0.58/\textcolor{black}{\textbf{  0.04}} &   0.58/  0.06 & \textcolor{red}{\textbf{  0.55}}/  0.05 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para C4.5w: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para C4.5w: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c}
  & TUeuc & TUman & TUmah\\ \hline 33-leukemia haslinger &   0.36/  0.12 &   0.36/  0.11 &   0.35/  0.10 \\
 34-mammographic mass &   0.56/  0.07 &   0.58/  0.05 &   0.57/  0.07 \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para C4.5w: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para C4.5w: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & DWeuc\\ \hline 65-statlog heart &   0.50/\textcolor{black}{\textbf{  0.06}} &   0.49/  0.07 &   0.50/  0.07 &   0.49/  0.07 &   0.48/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.06}} &   0.49/  0.08 &   0.50/\textcolor{black}{\textbf{  0.06}} &   0.50/  0.07 & \textcolor{red}{\textbf{  0.47}}/\textcolor{black}{\textbf{  0.06}} \\
 66-statlog image segm... &   0.63/  0.02 &   0.61/  0.02 & \textcolor{black}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.01}} &   0.64/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.65}}/  0.02 & \textcolor{black}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.01}} &   0.64/\textcolor{black}{\textbf{  0.01}} &   0.61/  0.02 &   0.64/  0.02 & \textcolor{red}{\textbf{  0.31}}/  0.03 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para C4.5w: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para C4.5w: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c}
  & TUeuc & TUman & TUmah\\ \hline 65-statlog heart & \textcolor{blue}{\textbf{  0.51}}/  0.07 & \textcolor{blue}{\textbf{  0.51}}/  0.07 &   0.50/\textcolor{black}{\textbf{  0.06}} \\
 66-statlog image segm... & \textcolor{black}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.66}}}/  0.02 & \textcolor{black}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.01}} \\
