--- a/stratsALCKappaCIELMBatchRedux.tex
+++ b/stratsALCKappaCIELMBatchRedux.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para CIELMBatch: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para CIELMBatch: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 1-connect. vowel... & \textcolor{blue}{\textbf{  0.11}}/  0.01 & \textcolor{blue}{\textbf{  0.11}}/  0.01 & \textcolor{blue}{\textbf{  0.11}}/  0.01 & \textcolor{blue}{\textbf{  0.11}}/  0.01 & \textcolor{blue}{\textbf{  0.11}}/  0.01 & \textcolor{blue}{\textbf{  0.11}}/  0.01 & \textcolor{red}{\textbf{  0.10}}/  0.01 & \textcolor{red}{\textbf{  0.10}}/  0.01 & \textcolor{blue}{\textbf{  0.11}}/  0.01 & \textcolor{blue}{\textbf{  0.11}}/  0.01 \\
 2-heart disease hung... &   0.32/\textcolor{black}{\textbf{  0.05}} &   0.31/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.35}}/  0.06 & \textcolor{red}{\textbf{  0.26}}/  0.06 &   0.29/\textcolor{darkgreen}{\textbf{  0.04}} &   0.33/  0.06 & \textcolor{black}{\textbf{  0.35}}/  0.07 &   0.34/  0.07 & \underline{\textcolor{blue}{\textbf{  0.36}}}/\textcolor{black}{\textbf{  0.05}} &   0.34/\textcolor{black}{\textbf{  0.05}} \\
