--- a/stratsALCKappaELMRedux.tex
+++ b/stratsALCKappaELMRedux.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para ELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para ELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 1-abalone 3class &   0.36/\textcolor{black}{\textbf{  0.03}} &   0.36/\textcolor{darkgreen}{\textbf{  0.02}} &   0.36/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.37}}/  0.04 &   0.29/  0.08 &   0.36/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.27}}/  0.08 & \textcolor{black}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.38}}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.03}} \\
 2-arcene &   0.20/\textcolor{black}{\textbf{  0.10}} & \textcolor{black}{\textbf{  0.21}}/\textcolor{darkgreen}{\textbf{  0.09}} &   0.20/  0.11 & \textcolor{red}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.10}} & \textcolor{red}{\textbf{  0.19}}/  0.13 & \textcolor{red}{\textbf{  0.19}}/  0.11 & \textcolor{red}{\textbf{  0.19}}/  0.11 & \textcolor{red}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.10}} & \textcolor{red}{\textbf{  0.19}}/  0.11 &   0.20/  0.11 & \textcolor{red}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.10}} \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para ELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para ELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc} & EMC\\ \hline 1-abalone 3class &   0.36/  0.04 &   0.35/  0.05 & \textcolor{black}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.03}} &   0.35/  0.04 \\
 2-arcene & \underline{\textcolor{blue}{\textbf{  0.22}}}/  0.11 & \textcolor{black}{\textbf{  0.21}}/  0.13 & \textcolor{red}{\textbf{  0.19}}/  0.11 & \textcolor{red}{\textbf{  0.19}}/  0.11 & \textcolor{black}{\textbf{  0.21}}/  0.13 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para ELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para ELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 33-leukemia haslinger & \textcolor{black}{\textbf{  0.43}}/  0.16 &   0.42/  0.17 &   0.41/  0.18 & \underline{\textcolor{blue}{\textbf{  0.45}}}/  0.16 & \textcolor{black}{\textbf{  0.43}}/\textcolor{black}{\textbf{  0.15}} &   0.42/  0.16 &   0.42/  0.16 &   0.41/  0.16 &   0.38/  0.16 &   0.42/  0.17 &   0.42/  0.16 \\
 34-mammographic mass &   0.55/\textcolor{black}{\textbf{  0.05}} &   0.54/  0.06 &   0.56/  0.06 &   0.55/  0.06 &   0.56/  0.06 & \textcolor{black}{\textbf{  0.57}}/  0.06 & \textcolor{black}{\textbf{  0.57}}/  0.06 &   0.52/  0.08 &   0.56/\textcolor{black}{\textbf{  0.05}} &   0.56/  0.06 & \textcolor{black}{\textbf{  0.57}}/  0.06 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para ELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para ELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc} & EMC\\ \hline 33-leukemia haslinger & \textcolor{black}{\textbf{  0.43}}/\textcolor{black}{\textbf{  0.15}} &   0.42/  0.16 &   0.39/  0.16 &   0.42/  0.18 & \textcolor{red}{\textbf{  0.37}}/  0.16 \\
 34-mammographic mass &   0.55/  0.07 &   0.56/  0.06 & \textcolor{black}{\textbf{  0.57}}/  0.06 & \underline{\textcolor{blue}{\textbf{  0.58}}}/  0.06 & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.05}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para ELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para ELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 65-statlog heart & \textcolor{red}{\textbf{  0.51}}/  0.08 & \textcolor{red}{\textbf{  0.51}}/  0.08 & \textcolor{blue}{\textbf{  0.53}}/  0.08 &   0.52/  0.08 & \textcolor{blue}{\textbf{  0.53}}/  0.08 & \textcolor{blue}{\textbf{  0.53}}/  0.08 &   0.52/  0.09 &   0.52/  0.10 &   0.52/  0.08 &   0.52/  0.09 &   0.52/  0.09 \\
 66-statlog image segm... &   0.69/\textcolor{black}{\textbf{  0.02}} &   0.70/  0.03 &   0.72/\textcolor{black}{\textbf{  0.02}} &   0.72/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.02}} &   0.50/  0.07 &   0.72/  0.03 & \textcolor{red}{\textbf{  0.34}}/  0.06 & \textcolor{black}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.02}} &   0.71/\textcolor{black}{\textbf{  0.02}} \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para ELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para ELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc} & EMC\\ \hline 65-statlog heart & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.07}} &   0.52/  0.10 & \textcolor{blue}{\textbf{  0.53}}/  0.09 &   0.52/\textcolor{black}{\textbf{  0.07}} &   0.52/  0.08 \\
 66-statlog image segm... &   0.70/  0.03 &   0.72/  0.03 & \underline{\textcolor{blue}{\textbf{  0.74}}}/\textcolor{black}{\textbf{  0.02}} &   0.72/\textcolor{black}{\textbf{  0.02}} &   0.66/  0.03 \\
