--- a/stratsALCKappaIELM.tex
+++ b/stratsALCKappaIELM.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para IELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para IELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 1-abalone 3class &   0.32/\textcolor{black}{\textbf{  0.06}} &   0.32/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.28}}/  0.10 & \textcolor{red}{\textbf{  0.28}}/  0.10 &   0.31/  0.10 & \textcolor{black}{\textbf{  0.33}}/  0.07 &   0.32/\textcolor{black}{\textbf{  0.06}} &   0.32/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.28}}/  0.08 & \underline{\textcolor{blue}{\textbf{  0.34}}}/  0.08 &   0.32/\textcolor{black}{\textbf{  0.06}} \\
 2-arcene & \textcolor{blue}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.13}} &   0.19/\textcolor{black}{\textbf{  0.13}} &   0.19/  0.15 &   0.21/  0.16 &   0.20/  0.16 &   0.16/\textcolor{black}{\textbf{  0.13}} &   0.19/  0.17 & \textcolor{blue}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.13}} &   0.16/  0.15 &   0.19/\textcolor{black}{\textbf{  0.13}} &   0.22/  0.16 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para IELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para IELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 1-abalone 3class & \textcolor{black}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.33}}/  0.07 &   0.32/  0.07 &   0.32/  0.07 & \textcolor{black}{\textbf{  0.33}}/  0.07 & \textcolor{black}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.33}}/  0.07 \\
 2-arcene &   0.18/  0.15 &   0.20/  0.16 &   0.18/  0.19 &   0.12/  0.16 &   0.07/  0.47 &  -0.18/  0.82 &   0.12/  0.47 & \textcolor{red}{\textbf{ -0.19}}/  0.82 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para IELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para IELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 33-leukemia haslinger &   0.42/  0.21 &   0.45/\textcolor{black}{\textbf{  0.18}} &   0.42/  0.22 &   0.42/  0.22 &   0.42/  0.22 &   0.43/  0.20 &   0.44/  0.20 &   0.45/  0.19 & \textcolor{blue}{\textbf{  0.47}}/  0.23 & \textcolor{blue}{\textbf{  0.47}}/  0.22 &   0.44/  0.20 \\
 34-mammographic mass &   0.48/  0.13 &   0.48/  0.12 & \textcolor{blue}{\textbf{  0.55}}/  0.07 & \textcolor{blue}{\textbf{  0.55}}/  0.07 & \textcolor{blue}{\textbf{  0.55}}/  0.07 &   0.50/  0.13 &   0.52/  0.09 &   0.48/  0.13 &   0.54/  0.09 & \textcolor{blue}{\textbf{  0.55}}/  0.07 &   0.53/  0.10 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para IELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para IELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 33-leukemia haslinger &   0.42/  0.21 & \textcolor{red}{\textbf{  0.41}}/  0.23 & \textcolor{red}{\textbf{  0.41}}/  0.20 &   0.42/  0.22 &   0.45/\textcolor{black}{\textbf{  0.18}} &   0.46/\textcolor{darkgreen}{\textbf{  0.17}} &   0.45/  0.23 & \textcolor{red}{\textbf{  0.41}}/  0.23 \\
 34-mammographic mass &   0.54/  0.09 &   0.52/  0.09 & \textcolor{blue}{\textbf{  0.55}}/  0.08 &   0.50/  0.10 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para IELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para IELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 65-statlog heart &   0.46/  0.15 &   0.45/\textcolor{black}{\textbf{  0.14}} &   0.52/\textcolor{black}{\textbf{  0.14}} &   0.52/\textcolor{black}{\textbf{  0.14}} &   0.52/\textcolor{black}{\textbf{  0.14}} &   0.50/  0.17 &   0.49/  0.16 & \textcolor{red}{\textbf{  0.43}}/  0.16 &   0.51/  0.16 &   0.52/  0.15 &   0.50/\textcolor{black}{\textbf{  0.14}} \\
 66-statlog image segm... &   0.66/  0.05 &   0.68/  0.04 &   0.60/  0.08 &   0.58/  0.08 & \textcolor{black}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} &   0.67/  0.05 &   0.71/  0.04 &   0.66/  0.04 & \textcolor{red}{\textbf{  0.50}}/  0.06 & \textcolor{black}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} &   0.69/  0.04 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para IELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para IELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 65-statlog heart & \underline{\textcolor{blue}{\textbf{  0.54}}}/  0.16 &   0.50/\textcolor{darkgreen}{\textbf{  0.12}} & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.14}} &   0.49/  0.17 & \textcolor{black}{\textbf{  0.53}}/  0.16 &   0.48/  0.16 &   0.51/  0.15 &   0.50/  0.16 \\
 66-statlog image segm... &   0.74/  0.04 &   0.69/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.76}}}/\textcolor{black}{\textbf{  0.03}} &   0.70/\textcolor{black}{\textbf{  0.03}} &   0.71/  0.04 &   0.71/  0.04 &   0.71/\textcolor{black}{\textbf{  0.03}} &   0.72/\textcolor{black}{\textbf{  0.03}} \\
