--- a/stratsALCKappaIELMRedux.tex
+++ b/stratsALCKappaIELMRedux.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para IELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para IELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & \textbf{GATU0man}\\ \hline 1-abalone 3class &   0.32/\textcolor{black}{\textbf{  0.06}} &   0.32/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.31}}/  0.10 & \textcolor{blue}{\textbf{  0.33}}/  0.07 &   0.32/\textcolor{black}{\textbf{  0.06}} &   0.32/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.33}}/  0.07 &   0.32/  0.07 &   0.32/  0.07 \\
 2-arcene & \textcolor{blue}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.13}} &   0.19/\textcolor{black}{\textbf{  0.13}} &   0.20/  0.16 &   0.16/\textcolor{black}{\textbf{  0.13}} &   0.19/  0.17 & \textcolor{blue}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.13}} &   0.18/  0.15 &   0.20/  0.16 &   0.18/  0.19 & \textcolor{red}{\textbf{  0.12}}/  0.16 &   0.17/  0.20 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para IELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para IELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & \textbf{GATU0man}\\ \hline 33-leukemia haslinger &   0.42/  0.21 & \textcolor{black}{\textbf{  0.45}}/\textcolor{black}{\textbf{  0.18}} &   0.42/  0.22 &   0.43/  0.20 &   0.44/  0.20 & \textcolor{black}{\textbf{  0.45}}/  0.19 &   0.42/  0.21 & \textcolor{red}{\textbf{  0.41}}/  0.23 & \textcolor{red}{\textbf{  0.41}}/  0.20 &   0.42/  0.22 & \textcolor{black}{\textbf{  0.45}}/\textcolor{black}{\textbf{  0.18}} \\
 34-mammographic mass & \textcolor{red}{\textbf{  0.48}}/  0.13 & \textcolor{red}{\textbf{  0.48}}/  0.12 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{darkgreen}{\textbf{  0.07}} &   0.50/  0.13 &   0.52/  0.09 & \textcolor{red}{\textbf{  0.48}}/  0.13 &   0.54/  0.09 &   0.52/  0.09 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.08}} &   0.50/  0.10 &   0.52/  0.10 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para IELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para IELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & \textbf{GATU0man}\\ \hline 65-statlog heart &   0.46/  0.15 &   0.45/\textcolor{black}{\textbf{  0.14}} &   0.52/\textcolor{black}{\textbf{  0.14}} &   0.50/  0.17 &   0.49/  0.16 & \textcolor{red}{\textbf{  0.43}}/  0.16 & \underline{\textcolor{blue}{\textbf{  0.54}}}/  0.16 &   0.50/\textcolor{darkgreen}{\textbf{  0.12}} & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.14}} &   0.49/  0.17 & \textcolor{black}{\textbf{  0.53}}/  0.16 \\
 66-statlog image segm... & \textcolor{red}{\textbf{  0.66}}/  0.05 &   0.68/  0.04 & \textcolor{black}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} &   0.67/  0.05 &   0.71/  0.04 & \textcolor{red}{\textbf{  0.66}}/  0.04 &   0.74/  0.04 &   0.69/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.76}}}/\textcolor{black}{\textbf{  0.03}} &   0.70/\textcolor{black}{\textbf{  0.03}} &   0.71/  0.04 \\
