--- a/stratsBalAccC4.5.tex
+++ b/stratsBalAccC4.5.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para C4.5: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para C4.5: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 1-abalone 3class & \underline{\textcolor{blue}{\textbf{  0.60}}}/\textcolor{darkgreen}{\textbf{  0.01}} &   0.55/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.04 &   0.54/  0.04 &   0.54/  0.04 &   0.54/  0.04 &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.56/  0.03 & \textcolor{red}{\textbf{  0.51}}/  0.07 &   0.56/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene & \textcolor{blue}{\textbf{  0.68}}/  0.07 &   0.66/  0.09 &   0.67/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.64}}/  0.07 & \textcolor{red}{\textbf{  0.64}}/  0.07 & \textcolor{red}{\textbf{  0.64}}/  0.07 &   0.67/  0.08 &   0.65/  0.08 &   0.66/\textcolor{black}{\textbf{  0.06}} &   0.66/  0.08 &   0.67/  0.09 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para C4.5: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para C4.5: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 1-abalone 3class &   0.55/  0.03 &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 &   0.56/  0.03 &   0.55/  0.03 &   0.55/  0.03 &   0.55/  0.03 &   0.56/  0.03 &   0.56/  0.03 & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene & \textcolor{blue}{\textbf{  0.68}}/  0.08 &   0.66/  0.08 &   0.65/  0.10 &   0.66/  0.08 &   0.66/  0.08 & \textcolor{blue}{\textbf{  0.68}}/  0.08 &   0.66/  0.08 &   0.66/  0.08 &   0.67/  0.07 &   0.67/  0.08 &   0.67/  0.08 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para C4.5: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para C4.5: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 33-leukemia haslinger & \textcolor{blue}{\textbf{  0.74}}/  0.10 &   0.69/  0.10 &   0.69/  0.13 &   0.69/  0.10 &   0.69/  0.10 &   0.69/  0.10 & \textcolor{red}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.09}} &   0.70/  0.10 &   0.70/  0.11 & \textcolor{red}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.09}} &   0.71/\textcolor{black}{\textbf{  0.09}} \\
 34-mammographic mass & \textcolor{black}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.03}} &   0.80/\textcolor{black}{\textbf{  0.03}} &   0.80/  0.04 &   0.80/  0.04 &   0.80/  0.04 &   0.80/  0.04 & \textcolor{black}{\textbf{  0.81}}/  0.04 & \textcolor{black}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.77}}/  0.07 &   0.80/  0.06 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para C4.5: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para C4.5: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 33-leukemia haslinger &   0.70/  0.12 & \textcolor{blue}{\textbf{  0.74}}/  0.10 &   0.68/  0.12 &   0.68/  0.10 &   0.71/  0.11 &   0.69/\textcolor{black}{\textbf{  0.09}} &   0.71/\textcolor{darkgreen}{\textbf{  0.08}} &   0.68/  0.12 &   0.71/  0.10 &   0.71/  0.10 &   0.70/  0.10 \\
 34-mammographic mass &   0.80/  0.04 & \textcolor{black}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.03}} &   0.80/  0.04 &   0.80/  0.04 &   0.80/  0.04 &   0.80/  0.04 &   0.80/  0.04 & \underline{\textcolor{blue}{\textbf{  0.82}}}/  0.04 &   0.79/  0.04 & \textcolor{black}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.03}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para C4.5: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para C4.5: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 65-statlog heart & \textcolor{black}{\textbf{  0.77}}/  0.05 & \textcolor{black}{\textbf{  0.77}}/  0.06 &   0.75/  0.05 & \textcolor{red}{\textbf{  0.74}}/  0.05 & \textcolor{red}{\textbf{  0.74}}/  0.05 & \textcolor{red}{\textbf{  0.74}}/  0.05 &   0.75/  0.05 &   0.75/  0.06 &   0.76/  0.06 &   0.75/  0.07 &   0.75/  0.06 \\
 66-statlog image segm... & \underline{\textcolor{blue}{\textbf{  0.96}}}/\textcolor{darkgreen}{\textbf{  0.01}} &   0.85/  0.03 &   0.85/  0.03 &   0.85/  0.04 &   0.85/  0.05 &   0.85/  0.04 &   0.85/  0.03 &   0.85/  0.03 &   0.85/  0.04 & \textcolor{red}{\textbf{  0.56}}/  0.10 &   0.85/  0.05 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para C4.5: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para C4.5: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 65-statlog heart &   0.75/\textcolor{black}{\textbf{  0.04}} &   0.75/  0.06 &   0.75/  0.06 &   0.76/  0.07 & \textcolor{red}{\textbf{  0.74}}/  0.05 &   0.75/  0.06 & \underline{\textcolor{blue}{\textbf{  0.78}}}/  0.07 &   0.75/  0.07 &   0.75/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.77}}/  0.05 &   0.75/  0.05 \\
 66-statlog image segm... &   0.86/  0.04 &   0.85/  0.04 & \textcolor{black}{\textbf{  0.88}}/\textcolor{black}{\textbf{  0.02}} &   0.87/\textcolor{black}{\textbf{  0.02}} &   0.87/\textcolor{black}{\textbf{  0.02}} &   0.84/  0.04 &   0.84/  0.05 &   0.83/  0.05 &   0.87/\textcolor{black}{\textbf{  0.02}} &   0.87/\textcolor{black}{\textbf{  0.02}} &   0.87/  0.03 \\
