--- a/stratsBalAccIELM.tex
+++ b/stratsBalAccIELM.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para IELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para IELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 1-abalone 3class & \underline{\textcolor{blue}{\textbf{  0.61}}}/\textcolor{darkgreen}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.03}} &   0.55/\textcolor{black}{\textbf{  0.03}} &   0.53/  0.07 & \textcolor{red}{\textbf{  0.51}}/  0.07 &   0.54/  0.07 &   0.55/  0.05 &   0.55/  0.04 &   0.55/  0.04 &   0.52/  0.06 &   0.56/  0.05 \\
 2-arcene & \underline{\textcolor{blue}{\textbf{  0.66}}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{black}{\textbf{  0.64}}/\textcolor{darkgreen}{\textbf{  0.07}} &   0.60/  0.10 &   0.62/\textcolor{black}{\textbf{  0.08}} &   0.61/  0.09 &   0.61/  0.09 & \textcolor{red}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.08}} &   0.60/  0.10 & \textcolor{black}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{red}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.08}} &   0.60/  0.10 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para IELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para IELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 1-abalone 3class &   0.55/  0.04 &   0.56/  0.05 &   0.55/  0.04 &   0.56/\textcolor{black}{\textbf{  0.03}} &   0.56/  0.05 & \textcolor{black}{\textbf{  0.57}}/  0.04 & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.03}} &   0.55/  0.04 &   0.55/  0.06 &   0.55/  0.04 \\
 2-arcene &   0.60/\textcolor{black}{\textbf{  0.08}} &   0.60/  0.10 &   0.63/  0.09 &   0.62/\textcolor{black}{\textbf{  0.08}} & \textcolor{red}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.08}} &   0.60/  0.12 &   0.62/  0.09 &   0.62/  0.09 &   0.63/  0.09 &   0.61/  0.10 & \textcolor{red}{\textbf{  0.58}}/  0.09 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para IELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para IELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 33-leukemia haslinger & \underline{\textcolor{blue}{\textbf{  0.77}}}/  0.11 &   0.72/  0.12 &   0.75/\textcolor{black}{\textbf{  0.10}} &   0.73/  0.11 &   0.73/  0.11 &   0.73/  0.11 &   0.74/  0.11 &   0.74/  0.11 &   0.74/  0.11 & \textcolor{black}{\textbf{  0.76}}/  0.14 & \textcolor{black}{\textbf{  0.76}}/  0.12 \\
 34-mammographic mass &   0.78/\textcolor{black}{\textbf{  0.03}} &   0.76/  0.06 &   0.76/  0.05 & \textcolor{black}{\textbf{  0.79}}/  0.04 & \textcolor{black}{\textbf{  0.79}}/  0.04 & \textcolor{black}{\textbf{  0.79}}/  0.04 &   0.76/  0.06 &   0.77/  0.05 & \textcolor{red}{\textbf{  0.75}}/  0.06 &   0.78/  0.04 & \underline{\textcolor{blue}{\textbf{  0.80}}}/\textcolor{black}{\textbf{  0.03}} \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para IELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para IELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 33-leukemia haslinger &   0.72/  0.12 &   0.73/\textcolor{black}{\textbf{  0.10}} &   0.74/\textcolor{black}{\textbf{  0.10}} &   0.72/  0.13 &   0.72/  0.13 &   0.74/\textcolor{black}{\textbf{  0.10}} &   0.74/\textcolor{black}{\textbf{  0.10}} &   0.74/\textcolor{darkgreen}{\textbf{  0.09}} &   0.75/  0.11 &   0.74/  0.11 & \textcolor{red}{\textbf{  0.70}}/  0.12 \\
 34-mammographic mass & \textcolor{black}{\textbf{  0.79}}/  0.04 &   0.78/  0.04 &   0.77/  0.05 &   0.77/  0.04 &   0.76/  0.05 & \textcolor{black}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.03}} &   0.77/  0.06 &   0.78/  0.04 &   0.77/  0.04 \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para IELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para IELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 65-statlog heart &   0.76/\textcolor{black}{\textbf{  0.07}} &   0.74/\textcolor{black}{\textbf{  0.07}} &   0.75/\textcolor{black}{\textbf{  0.07}} & \textcolor{black}{\textbf{  0.78}}/  0.08 & \textcolor{black}{\textbf{  0.78}}/  0.08 & \textcolor{black}{\textbf{  0.78}}/  0.08 &   0.77/  0.09 &   0.76/  0.08 & \textcolor{red}{\textbf{  0.73}}/  0.08 &   0.77/  0.08 &   0.77/  0.08 \\
 66-statlog image segm... & \underline{\textcolor{blue}{\textbf{  0.86}}}/\textcolor{darkgreen}{\textbf{  0.02}} &   0.74/  0.05 &   0.76/\textcolor{black}{\textbf{  0.03}} &   0.68/  0.08 &   0.66/  0.08 &   0.82/\textcolor{black}{\textbf{  0.03}} &   0.74/  0.04 &   0.78/  0.04 &   0.73/  0.04 & \textcolor{red}{\textbf{  0.57}}/  0.06 &   0.81/\textcolor{black}{\textbf{  0.03}} \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para IELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para IELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 65-statlog heart & \underline{\textcolor{blue}{\textbf{  0.79}}}/  0.08 & \textcolor{black}{\textbf{  0.78}}/\textcolor{black}{\textbf{  0.07}} &   0.76/\textcolor{black}{\textbf{  0.07}} &   0.76/\textcolor{darkgreen}{\textbf{  0.06}} &   0.76/  0.08 & \textcolor{black}{\textbf{  0.78}}/\textcolor{black}{\textbf{  0.07}} &   0.76/  0.08 &   0.77/  0.08 &   0.75/  0.08 &   0.77/\textcolor{black}{\textbf{  0.07}} &   0.75/  0.10 \\
 66-statlog image segm... &   0.81/  0.04 & \textcolor{black}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.03}} &   0.76/\textcolor{black}{\textbf{  0.03}} &   0.76/\textcolor{black}{\textbf{  0.03}} &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.81/  0.04 &   0.80/  0.04 &   0.82/\textcolor{black}{\textbf{  0.03}} &   0.76/  0.04 &   0.76/  0.04 &   0.76/\textcolor{black}{\textbf{  0.03}} \\
