--- a/stratsBalAccVFDT.tex
+++ b/stratsBalAccVFDT.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para VFDT: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para VFDT: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 1-abalone 3class &   0.57/\textcolor{black}{\textbf{  0.01}} &   0.57/\textcolor{black}{\textbf{  0.01}} &   0.57/  0.02 & \textcolor{red}{\textbf{  0.45}}/  0.11 &   0.46/  0.12 &   0.52/  0.09 &   0.57/\textcolor{black}{\textbf{  0.01}} &   0.54/  0.05 &   0.56/  0.05 & \textcolor{red}{\textbf{  0.45}}/  0.09 &   0.57/  0.05 \\
 2-arcene &   0.68/  0.06 &   0.68/  0.06 &   0.68/  0.07 & \textcolor{black}{\textbf{  0.71}}/  0.06 &   0.69/  0.11 & \textcolor{black}{\textbf{  0.71}}/  0.09 &   0.68/  0.09 &   0.70/  0.06 &   0.69/  0.06 & \underline{\textcolor{blue}{\textbf{  0.72}}}/  0.09 &   0.70/  0.08 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para VFDT: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para VFDT: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 1-abalone 3class &   0.57/  0.06 &   0.55/  0.07 & \textcolor{blue}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.01}} &   0.57/\textcolor{black}{\textbf{  0.01}} &   0.57/  0.02 & \textcolor{blue}{\textbf{  0.58}}/  0.02 &   0.57/  0.05 &   0.55/  0.07 & \textcolor{blue}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.01}} &   0.57/\textcolor{black}{\textbf{  0.01}} &   0.57/\textcolor{black}{\textbf{  0.01}} \\
 2-arcene &   0.70/  0.06 &   0.69/  0.09 &   0.68/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.05}} &   0.68/  0.06 &   0.70/  0.07 &   0.69/  0.08 &   0.68/  0.10 &   0.68/  0.06 &   0.68/  0.06 &   0.68/  0.06 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para VFDT: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para VFDT: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 33-leukemia haslinger & \textcolor{blue}{\textbf{  0.88}}/  0.08 &   0.87/  0.07 &   0.85/  0.07 &   0.83/  0.07 & \textcolor{red}{\textbf{  0.82}}/  0.07 &   0.83/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.82}}/  0.09 &   0.85/  0.08 &   0.86/  0.08 &   0.83/\textcolor{black}{\textbf{  0.06}} &   0.83/  0.08 \\
 34-mammographic mass & \textcolor{black}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.03}} &   0.78/  0.04 &   0.72/  0.09 &   0.68/  0.12 &   0.72/  0.09 &   0.78/  0.05 &   0.76/  0.08 &   0.70/  0.10 & \textcolor{red}{\textbf{  0.67}}/  0.11 &   0.73/  0.08 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para VFDT: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para VFDT: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 33-leukemia haslinger &   0.84/  0.07 &   0.85/  0.08 &   0.87/  0.07 & \textcolor{blue}{\textbf{  0.88}}/  0.07 &   0.86/  0.08 &   0.83/  0.08 &   0.84/  0.08 &   0.84/  0.08 &   0.87/  0.08 &   0.87/  0.08 &   0.86/  0.09 \\
 34-mammographic mass &   0.72/  0.09 &   0.70/  0.11 & \underline{\textcolor{blue}{\textbf{  0.81}}}/\textcolor{black}{\textbf{  0.03}} &   0.79/\textcolor{black}{\textbf{  0.03}} &   0.79/  0.05 &   0.73/  0.06 &   0.71/  0.08 &   0.72/  0.09 & \textcolor{black}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.03}} &   0.78/  0.06 & \textcolor{black}{\textbf{  0.80}}/  0.04 \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para VFDT: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para VFDT: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 65-statlog heart & \textcolor{black}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.05}} &   0.82/\textcolor{black}{\textbf{  0.05}} &   0.77/  0.08 &   0.80/  0.09 &   0.80/  0.06 &   0.79/  0.08 &   0.80/  0.08 &   0.80/  0.11 & \textcolor{red}{\textbf{  0.73}}/  0.10 &   0.81/  0.06 \\
 66-statlog image segm... & \textcolor{black}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.02}} &   0.77/  0.04 &   0.76/  0.04 &   0.70/  0.07 &   0.64/  0.16 &   0.71/  0.09 &   0.77/  0.04 &   0.74/  0.05 & \underline{\textcolor{blue}{\textbf{  0.80}}}/  0.03 & \textcolor{red}{\textbf{  0.62}}/  0.14 &   0.76/  0.06 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para VFDT: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para VFDT: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 65-statlog heart &   0.80/\textcolor{black}{\textbf{  0.05}} &   0.81/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.83}}/  0.06 &   0.81/\textcolor{darkgreen}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.05}} &   0.81/  0.06 &   0.81/  0.06 &   0.81/  0.06 & \textcolor{black}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.05}} & \underline{\textcolor{blue}{\textbf{  0.84}}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.05}} \\
 66-statlog image segm... &   0.75/  0.06 &   0.68/  0.17 &   0.76/  0.03 &   0.77/  0.03 &   0.74/  0.03 &   0.72/  0.13 &   0.77/  0.05 &   0.73/  0.05 &   0.75/  0.04 &   0.77/\textcolor{black}{\textbf{  0.02}} &   0.74/  0.04 \\
