--- a/stratsmahALCKappaAllall.tex
+++ b/stratsmahALCKappaAllall.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{SGmulti} & Ent & Mar & EERacu & EERent & SVMbal & SVMsim\\ \hline 1-abalone 3class &   0.29/\textcolor{black}{\textbf{  0.03}} &   0.30/\textcolor{black}{\textbf{  0.03}} &   0.29/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.31}}/  0.05 & \textcolor{black}{\textbf{  0.31}}/  0.05 &   0.29/  0.04 &   0.30/  0.05 & \underline{\textcolor{blue}{\textbf{  0.32}}}/  0.04 & \textcolor{red}{\textbf{  0.28}}/  0.08 \\
 2-arcene & \textcolor{black}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.07}} &   0.57/  0.09 & \textcolor{black}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.07}} &   0.52/  0.10 &   0.52/  0.10 & \textcolor{red}{\textbf{  0.51}}/  0.10 & \underline{\textcolor{blue}{\textbf{  0.59}}}/  0.11 &   0.57/  0.09 &   0.56/  0.08 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 1-abalone 3class &  \\
 2-arcene &  \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{SGmulti} & Ent & Mar & EERacu & EERent & SVMbal & SVMsim\\ \hline 33-leukemia haslinger &   0.57/  0.15 & \textcolor{black}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.13}} &   0.57/  0.15 &   0.58/\textcolor{black}{\textbf{  0.13}} &   0.58/\textcolor{black}{\textbf{  0.13}} & \underline{\textcolor{blue}{\textbf{  0.60}}}/  0.14 & \textcolor{red}{\textbf{  0.54}}/  0.14 &   0.57/  0.14 &   0.58/\textcolor{black}{\textbf{  0.13}} \\
 34-mammographic mass & \textcolor{blue}{\textbf{  0.48}}/\textcolor{black}{\textbf{  0.05}} &   0.44/  0.08 & \textcolor{blue}{\textbf{  0.48}}/\textcolor{black}{\textbf{  0.05}} &   0.40/  0.06 &   0.40/  0.06 & \textcolor{red}{\textbf{  0.39}}/  0.07 &   0.45/  0.07 & \textcolor{blue}{\textbf{  0.48}}/  0.07 & \textcolor{blue}{\textbf{  0.48}}/  0.08 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 33-leukemia haslinger &  \\
 34-mammographic mass &  \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{SGmulti} & Ent & Mar & EERacu & EERent & SVMbal & SVMsim\\ \hline 65-statlog heart &   0.49/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.52}}/  0.08 &   0.49/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.48}}/  0.08 & \textcolor{red}{\textbf{  0.48}}/  0.08 & \textcolor{red}{\textbf{  0.48}}/  0.08 & \textcolor{blue}{\textbf{  0.52}}/  0.09 & \textcolor{blue}{\textbf{  0.52}}/  0.08 &   0.51/  0.09 \\
 66-statlog image segm... &   0.80/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.02}} &   0.80/\textcolor{black}{\textbf{  0.02}} &   0.77/  0.03 &   0.77/  0.03 &   0.75/  0.04 & \textcolor{blue}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.02}} &   0.75/  0.03 & \textcolor{red}{\textbf{  0.74}}/  0.03 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 65-statlog heart &  \\
 66-statlog image segm... &  \\
