--- a/stratstabALCKappaNB.tex
+++ b/stratstabALCKappaNB.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ComparaÁ„o de estratÈgias com aprendiz (se aplic·vel) e classificador NB. \textit{MÈdia e desvio padr„o da ALC da medida kappa multiclasse. Maior e menor mÈdia de cada base est„o em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores mÈdias isoladas est„o sublinhadas. Os melhores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
+\caption{Compara√ß√£o de estrat√©gias com aprendiz (se aplic√°vel) e classificador NB. \textit{M√©dia e desvio padr√£o da ALC da medida kappa multiclasse. Maior e menor m√©dia de cada base est√£o em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores m√©dias isoladas est√£o sublinhadas. Os melhores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
  \hline 
@@ -41,7 +41,7 @@
 \end{table}
                                      \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ComparaÁ„o de estratÈgias com aprendiz (se aplic·vel) e classificador NB. \textit{MÈdia e desvio padr„o da ALC da medida kappa multiclasse. Maior e menor mÈdia de cada base est„o em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores mÈdias isoladas est„o sublinhadas. Os melhores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
+\caption{Compara√ß√£o de estrat√©gias com aprendiz (se aplic√°vel) e classificador NB. \textit{M√©dia e desvio padr√£o da ALC da medida kappa multiclasse. Maior e menor m√©dia de cada base est√£o em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores m√©dias isoladas est√£o sublinhadas. Os melhores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
  \hline 
@@ -82,7 +82,7 @@
 \end{table}
                                      \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ComparaÁ„o de estratÈgias com aprendiz (se aplic·vel) e classificador NB. \textit{MÈdia e desvio padr„o da ALC da medida kappa multiclasse. Maior e menor mÈdia de cada base est„o em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores mÈdias isoladas est„o sublinhadas. Os melhores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
+\caption{Compara√ß√£o de estrat√©gias com aprendiz (se aplic√°vel) e classificador NB. \textit{M√©dia e desvio padr√£o da ALC da medida kappa multiclasse. Maior e menor m√©dia de cada base est√£o em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores m√©dias isoladas est√£o sublinhadas. Os melhores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
  \hline 
@@ -123,7 +123,7 @@
 \end{table}
                                      \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ComparaÁ„o de estratÈgias com aprendiz (se aplic·vel) e classificador NB. \textit{MÈdia e desvio padr„o da ALC da medida kappa multiclasse. Maior e menor mÈdia de cada base est„o em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores mÈdias isoladas est„o sublinhadas. Os melhores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
+\caption{Compara√ß√£o de estrat√©gias com aprendiz (se aplic√°vel) e classificador NB. \textit{M√©dia e desvio padr√£o da ALC da medida kappa multiclasse. Maior e menor m√©dia de cada base est√£o em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores m√©dias isoladas est√£o sublinhadas. Os melhores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
  \hline 
@@ -164,7 +164,7 @@
 \end{table}
                                      \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ComparaÁ„o de estratÈgias com aprendiz (se aplic·vel) e classificador NB. \textit{MÈdia e desvio padr„o da ALC da medida kappa multiclasse. Maior e menor mÈdia de cada base est„o em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores mÈdias isoladas est„o sublinhadas. Os melhores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
+\caption{Compara√ß√£o de estrat√©gias com aprendiz (se aplic√°vel) e classificador NB. \textit{M√©dia e desvio padr√£o da ALC da medida kappa multiclasse. Maior e menor m√©dia de cada base est√£o em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores m√©dias isoladas est√£o sublinhadas. Os melhores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
  \hline 
@@ -203,7 +203,7 @@
 \end{table}
                                      \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ComparaÁ„o de estratÈgias com aprendiz (se aplic·vel) e classificador NB. \textit{MÈdia e desvio padr„o da ALC da medida kappa multiclasse. Maior e menor mÈdia de cada base est„o em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores mÈdias isoladas est„o sublinhadas. Os melhores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
+\caption{Compara√ß√£o de estrat√©gias com aprendiz (se aplic√°vel) e classificador NB. \textit{M√©dia e desvio padr√£o da ALC da medida kappa multiclasse. Maior e menor m√©dia de cada base est√£o em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores m√©dias isoladas est√£o sublinhadas. Os melhores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
  \hline 
