--- a/stratsALCKappa5NN.tex
+++ b/stratsALCKappa5NN.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 1-abalone 3class &   0.29/\textcolor{black}{\textbf{  0.03}} &   0.30/\textcolor{black}{\textbf{  0.03}} &   0.31/  0.05 &   0.31/  0.05 &   0.31/  0.05 &   0.30/  0.05 &   0.29/  0.04 &   0.29/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.28}}/  0.06 & \textcolor{blue}{\textbf{  0.32}}/  0.04 &   0.31/\textcolor{black}{\textbf{  0.03}} \\
 2-arcene &   0.58/\textcolor{black}{\textbf{  0.07}} &   0.57/  0.09 &   0.53/  0.10 &   0.52/  0.10 &   0.52/  0.10 &   0.59/  0.11 &   0.51/  0.10 &   0.58/\textcolor{black}{\textbf{  0.07}} &   0.59/  0.09 &   0.58/  0.09 &   0.60/  0.09 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 1-abalone 3class &   0.31/  0.05 & \textcolor{blue}{\textbf{  0.32}}/\textcolor{black}{\textbf{  0.03}} &   0.31/\textcolor{black}{\textbf{  0.03}} &   0.31/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.32}}/\textcolor{black}{\textbf{  0.03}} &   0.31/\textcolor{black}{\textbf{  0.03}} &   0.31/  0.04 &   0.31/\textcolor{black}{\textbf{  0.03}} \\
 2-arcene &   0.58/  0.09 & \underline{\textcolor{blue}{\textbf{  0.62}}}/  0.11 &   0.53/  0.10 &   0.58/  0.09 &   0.59/  0.09 &   0.36/  0.72 & \textcolor{black}{\textbf{  0.61}}/  0.08 & \textcolor{red}{\textbf{  0.33}}/  0.71 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 33-leukemia haslinger &   0.57/  0.15 &   0.59/\textcolor{black}{\textbf{  0.13}} &   0.58/\textcolor{black}{\textbf{  0.13}} &   0.58/\textcolor{black}{\textbf{  0.13}} &   0.58/\textcolor{black}{\textbf{  0.13}} &   0.54/  0.14 & \textcolor{blue}{\textbf{  0.60}}/  0.14 &   0.57/  0.15 & \textcolor{red}{\textbf{  0.52}}/\textcolor{darkgreen}{\textbf{  0.11}} &   0.57/  0.15 & \textcolor{blue}{\textbf{  0.60}}/  0.15 \\
 34-mammographic mass & \textcolor{blue}{\textbf{  0.48}}/  0.05 &   0.44/  0.08 &   0.40/  0.06 &   0.40/  0.06 &   0.40/  0.06 &   0.45/  0.07 &   0.39/  0.07 & \textcolor{blue}{\textbf{  0.48}}/  0.05 &   0.45/  0.07 &   0.40/  0.10 &   0.47/  0.07 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 33-leukemia haslinger &   0.55/  0.15 &   0.58/  0.17 &   0.57/  0.14 & \textcolor{blue}{\textbf{  0.60}}/  0.16 &   0.54/  0.14 &   0.53/  0.17 &   0.59/  0.17 & \textcolor{blue}{\textbf{  0.60}}/  0.16 \\
 34-mammographic mass &   0.42/  0.07 &   0.46/  0.06 &   0.42/  0.07 & \textcolor{blue}{\textbf{  0.48}}/  0.06 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 65-statlog heart &   0.49/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.52}}/  0.08 &   0.48/  0.08 &   0.48/  0.08 &   0.48/  0.08 & \textcolor{blue}{\textbf{  0.52}}/  0.09 &   0.48/  0.08 &   0.49/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.47}}/  0.10 &   0.49/  0.09 &   0.50/  0.09 \\
 66-statlog image segm... &   0.80/  0.02 &   0.82/  0.02 &   0.77/  0.03 &   0.77/  0.03 &   0.77/  0.03 &   0.82/  0.02 & \textcolor{red}{\textbf{  0.75}}/  0.04 &   0.80/  0.02 &   0.76/  0.03 &   0.81/  0.02 & \textcolor{blue}{\textbf{  0.84}}/  0.02 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 65-statlog heart &   0.50/  0.09 &   0.50/  0.09 &   0.49/  0.10 &   0.49/  0.08 &   0.51/\textcolor{black}{\textbf{  0.07}} &   0.51/  0.09 &   0.49/  0.09 &   0.48/  0.08 \\
 66-statlog image segm... &   0.82/  0.02 & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} &   0.83/  0.02 & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} &   0.83/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.84}}/  0.02 &   0.83/  0.02 & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} \\
