--- a/stratsALCKappa5NNRedux.tex
+++ b/stratsALCKappa5NNRedux.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & DWeuc\\ \hline 1-abalone 3class &   0.29/\textcolor{black}{\textbf{  0.03}} &   0.30/\textcolor{black}{\textbf{  0.03}} &   0.31/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.32}}/\textcolor{black}{\textbf{  0.03}} &   0.31/\textcolor{black}{\textbf{  0.03}} &   0.31/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.32}}/\textcolor{black}{\textbf{  0.03}} &   0.31/\textcolor{black}{\textbf{  0.03}} &   0.29/\textcolor{black}{\textbf{  0.03}} &   0.31/  0.05 & \textcolor{red}{\textbf{  0.28}}/  0.06 \\
 2-arcene &   0.58/\textcolor{black}{\textbf{  0.07}} &   0.57/  0.09 &   0.60/  0.09 & \textcolor{blue}{\textbf{  0.62}}/  0.11 &   0.58/  0.09 &   0.60/  0.09 & \textcolor{blue}{\textbf{  0.62}}/  0.11 &   0.55/  0.09 &   0.58/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.52}}/  0.10 &   0.59/  0.09 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c}
  & TUeuc & TUman & TUmah\\ \hline 1-abalone 3class & \textcolor{blue}{\textbf{  0.32}}/  0.04 &   0.31/  0.05 &   0.31/\textcolor{black}{\textbf{  0.03}} \\
 2-arcene &   0.58/  0.09 &   0.58/  0.09 &   0.53/  0.10 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & DWeuc\\ \hline 33-leukemia haslinger &   0.57/  0.15 &   0.59/\textcolor{black}{\textbf{  0.13}} & \textcolor{blue}{\textbf{  0.60}}/  0.15 &   0.58/  0.17 & \textcolor{blue}{\textbf{  0.60}}/  0.16 & \textcolor{blue}{\textbf{  0.60}}/  0.15 &   0.58/  0.17 & \textcolor{blue}{\textbf{  0.60}}/  0.16 &   0.57/  0.15 &   0.58/\textcolor{black}{\textbf{  0.13}} & \textcolor{red}{\textbf{  0.52}}/\textcolor{darkgreen}{\textbf{  0.11}} \\
 34-mammographic mass & \textcolor{blue}{\textbf{  0.48}}/\textcolor{black}{\textbf{  0.05}} &   0.44/  0.08 &   0.47/  0.07 &   0.46/  0.06 & \textcolor{blue}{\textbf{  0.48}}/  0.06 &   0.42/\textcolor{black}{\textbf{  0.05}} &   0.44/  0.07 &   0.46/  0.06 & \textcolor{blue}{\textbf{  0.48}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.40}}/  0.06 &   0.45/  0.07 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c}
  & TUeuc & TUman & TUmah\\ \hline 33-leukemia haslinger &   0.57/  0.15 &   0.55/  0.15 &   0.57/  0.14 \\
 34-mammographic mass & \textcolor{red}{\textbf{  0.40}}/  0.10 &   0.42/  0.07 &   0.42/  0.07 \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & DWeuc\\ \hline 65-statlog heart &   0.49/\textcolor{black}{\textbf{  0.07}} & \underline{\textcolor{blue}{\textbf{  0.52}}}/  0.08 & \textcolor{black}{\textbf{  0.50}}/  0.09 & \textcolor{black}{\textbf{  0.50}}/  0.09 &   0.49/  0.08 & \textcolor{black}{\textbf{  0.50}}/  0.09 & \textcolor{black}{\textbf{  0.50}}/  0.09 &   0.49/  0.08 &   0.49/\textcolor{black}{\textbf{  0.07}} &   0.48/  0.08 & \textcolor{red}{\textbf{  0.47}}/  0.10 \\
 66-statlog image segm... &   0.80/  0.02 &   0.82/  0.02 & \textcolor{blue}{\textbf{  0.84}}/  0.02 & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.84}}/  0.02 & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} &   0.80/  0.02 &   0.77/  0.03 & \textcolor{red}{\textbf{  0.76}}/  0.03 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c}
  & TUeuc & TUman & TUmah\\ \hline 65-statlog heart &   0.49/  0.09 & \textcolor{black}{\textbf{  0.50}}/  0.09 &   0.49/  0.10 \\
 66-statlog image segm... &   0.81/  0.02 &   0.82/  0.02 &   0.83/  0.02 \\
