--- a/stratsALCKappa5NNaRedux.tex
+++ b/stratsALCKappa5NNaRedux.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NNa: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NNa: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 1-abalone 3class &   0.29/  0.03 &   0.30/  0.03 &   0.31/  0.03 & \textcolor{blue}{\textbf{  0.32}}/  0.03 &   0.31/  0.03 &   0.31/  0.05 &   0.31/  0.05 &   0.28/  0.06 & \textcolor{blue}{\textbf{  0.32}}/  0.04 &   0.31/  0.05 &   0.29/  0.03 \\
 2-arcene &   0.58/  0.07 &   0.57/  0.09 &   0.60/  0.09 & \textcolor{blue}{\textbf{  0.62}}/  0.11 &   0.58/  0.09 &   0.52/  0.10 &   0.52/  0.10 &   0.59/  0.09 &   0.58/  0.09 &   0.58/  0.09 &   0.58/  0.07 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NNa: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NNa: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & SVMLbal & SVMLsim & EMC & QBC\\ \hline 1-abalone 3class &   0.29/  0.04 &   0.30/  0.05 &   0.31/  0.03 &   0.31/  0.03 & \textcolor{blue}{\textbf{  0.32}}/  0.03 &   0.31/  0.03 & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} \\
 2-arcene &   0.51/  0.10 &   0.59/  0.11 &   0.53/  0.10 &   0.60/  0.09 & \textcolor{blue}{\textbf{  0.62}}/  0.11 &   0.55/  0.09 & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NNa: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NNa: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 33-leukemia haslinger &   0.57/  0.15 &   0.59/  0.13 & \textcolor{blue}{\textbf{  0.60}}/  0.15 &   0.58/  0.17 & \textcolor{blue}{\textbf{  0.60}}/  0.16 &   0.58/  0.13 &   0.58/  0.13 &   0.52/  0.11 &   0.57/  0.15 &   0.55/  0.15 &   0.57/  0.15 \\
 34-mammographic mass & \textcolor{blue}{\textbf{  0.48}}/  0.05 &   0.44/  0.08 &   0.47/  0.07 &   0.46/  0.06 & \textcolor{blue}{\textbf{  0.48}}/  0.06 &   0.40/  0.06 &   0.40/  0.06 &   0.45/  0.07 &   0.40/  0.10 &   0.42/  0.07 & \textcolor{blue}{\textbf{  0.48}}/  0.05 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NNa: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NNa: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & SVMLbal & SVMLsim & EMC & QBC\\ \hline 33-leukemia haslinger & \textcolor{blue}{\textbf{  0.60}}/  0.14 &   0.54/  0.14 &   0.57/  0.14 & \textcolor{blue}{\textbf{  0.60}}/  0.15 &   0.58/  0.17 & \textcolor{blue}{\textbf{  0.60}}/  0.16 & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} \\
 34-mammographic mass &   0.39/  0.07 &   0.45/  0.07 &   0.42/  0.07 &   0.42/  0.05 &   0.44/  0.07 &   0.46/  0.06 & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NNa: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NNa: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 65-statlog heart &   0.49/  0.07 & \textcolor{blue}{\textbf{  0.52}}/  0.08 &   0.50/  0.09 &   0.50/  0.09 &   0.49/  0.08 &   0.48/  0.08 &   0.48/  0.08 &   0.47/  0.10 &   0.49/  0.09 &   0.50/  0.09 &   0.49/  0.07 \\
 66-statlog image segm... &   0.80/  0.02 &   0.82/  0.02 & \textcolor{blue}{\textbf{  0.84}}/  0.02 & \textcolor{blue}{\textbf{  0.84}}/  0.01 & \textcolor{blue}{\textbf{  0.84}}/  0.01 &   0.77/  0.03 &   0.77/  0.03 &   0.76/  0.03 &   0.81/  0.02 &   0.82/  0.02 &   0.80/  0.02 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para 5NNa: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para 5NNa: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & SVMLbal & SVMLsim & EMC & QBC\\ \hline 65-statlog heart &   0.48/  0.08 & \textcolor{blue}{\textbf{  0.52}}/  0.09 &   0.49/  0.10 &   0.50/  0.09 &   0.50/  0.09 &   0.49/  0.08 & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} \\
 66-statlog image segm... &   0.75/  0.04 &   0.82/  0.02 &   0.83/  0.02 & \textcolor{blue}{\textbf{  0.84}}/  0.02 & \textcolor{blue}{\textbf{  0.84}}/  0.01 & \textcolor{blue}{\textbf{  0.84}}/  0.01 & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} \\
