--- a/stratsALCKappaAllRedux50.tex
+++ b/stratsALCKappaAllRedux50.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & TUmah & EERacu & EERent\\ \hline 1-abalone 3class &   0.26/  0.05 &   0.26/  0.05 & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.04}} &   0.26/  0.05 &   0.25/  0.06 &   0.27/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.24}}/  0.05 &   0.26/  0.06 \\
 2-abalone 3class & \textcolor{red}{\textbf{  0.22}}/  0.05 &   0.24/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.25}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.25}}/\textcolor{darkgreen}{\textbf{  0.02}} &   0.23/  0.05 &   0.23/  0.04 & \textcolor{blue}{\textbf{  0.25}}/\textcolor{black}{\textbf{  0.03}} &   0.23/  0.04 &   0.23/  0.05 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 1-abalone 3class &  \\
 2-abalone 3class &  \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & TUmah & EERacu & EERent\\ \hline 33-banknote authentic... &   0.80/  0.05 &   0.81/  0.06 & \textcolor{blue}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.02}} &   0.80/  0.05 &   0.86/  0.05 &   0.89/  0.03 & \textcolor{red}{\textbf{  0.69}}/  0.10 &   0.88/  0.04 \\
 34-banknote authentic... &   0.56/  0.07 &   0.57/  0.07 & \textcolor{blue}{\textbf{  0.63}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.63}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.55}}/  0.07 & \textcolor{red}{\textbf{  0.55}}/  0.09 &   0.59/  0.06 &   0.57/  0.07 &   0.59/  0.06 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 33-banknote authentic... &  \\
 34-banknote authentic... &  \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & TUmah & EERacu & EERent\\ \hline 65-connect. vowel... & \textcolor{red}{\textbf{  0.21}}/  0.04 & \textcolor{red}{\textbf{  0.21}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.21}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.21}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.21}}/  0.04 & \textcolor{blue}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.03}} &   0.23/\textcolor{black}{\textbf{  0.03}} &   0.23/\textcolor{black}{\textbf{  0.03}} \\
 66-connect. vowel... &   0.08/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.07}}/  0.02 & \textcolor{blue}{\textbf{  0.09}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.09}}/\textcolor{black}{\textbf{  0.01}} &   0.08/\textcolor{black}{\textbf{  0.01}} &   0.08/  0.02 & \textcolor{blue}{\textbf{  0.09}}/\textcolor{black}{\textbf{  0.01}} &   0.08/\textcolor{black}{\textbf{  0.01}} &   0.08/  0.02 \\
@@ -185,7 +185,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 65-connect. vowel... &  \\
 66-connect. vowel... &  \\
@@ -222,7 +222,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & TUmah & EERacu & EERent\\ \hline 97-hepatitis & \textcolor{red}{\textbf{  0.27}}/  0.19 & \textcolor{blue}{\textbf{  0.37}}/  0.18 &   0.31/  0.17 &   0.31/  0.17 & \textcolor{red}{\textbf{  0.27}}/  0.19 &   0.31/\textcolor{darkgreen}{\textbf{  0.12}} &   0.36/  0.14 &   0.36/  0.16 & \textcolor{blue}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.13}} \\
 98-hepatitis &   0.18/  0.12 & \textcolor{black}{\textbf{  0.22}}/\textcolor{black}{\textbf{  0.11}} &   0.21/  0.12 &   0.21/  0.13 & \textcolor{red}{\textbf{  0.17}}/  0.12 & \textcolor{red}{\textbf{  0.17}}/  0.12 &   0.19/  0.12 &   0.21/  0.12 & \underline{\textcolor{blue}{\textbf{  0.23}}}/\textcolor{black}{\textbf{  0.11}} \\
@@ -259,7 +259,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 97-hepatitis &  \\
 98-hepatitis &  \\
@@ -296,7 +296,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & TUmah & EERacu & EERent\\ \hline 129-leukemia haslinger &   0.56/  0.16 & \textcolor{black}{\textbf{  0.60}}/\textcolor{darkgreen}{\textbf{  0.12}} & \textcolor{black}{\textbf{  0.60}}/  0.18 & \textcolor{black}{\textbf{  0.60}}/  0.18 &   0.56/  0.16 &   0.57/\textcolor{black}{\textbf{  0.14}} &   0.55/  0.17 & \underline{\textcolor{blue}{\textbf{  0.61}}}/  0.15 & \textcolor{red}{\textbf{  0.49}}/  0.16 \\
 130-leukemia haslinger & \textcolor{blue}{\textbf{  0.32}}/  0.11 & \textcolor{blue}{\textbf{  0.32}}/  0.11 &   0.31/  0.11 &   0.30/\textcolor{black}{\textbf{  0.09}} &   0.31/  0.13 & \textcolor{red}{\textbf{  0.29}}/  0.14 &   0.31/\textcolor{darkgreen}{\textbf{  0.08}} &   0.31/  0.14 &   0.31/  0.13 \\
@@ -333,7 +333,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 129-leukemia haslinger &  \\
 130-leukemia haslinger &  \\
@@ -370,7 +370,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & TUmah & EERacu & EERent\\ \hline 161-movement libras & \textcolor{red}{\textbf{  0.44}}/\textcolor{black}{\textbf{  0.06}} &   0.45/  0.07 & \textcolor{blue}{\textbf{  0.49}}/  0.07 & \textcolor{blue}{\textbf{  0.49}}/  0.07 & \textcolor{red}{\textbf{  0.44}}/\textcolor{black}{\textbf{  0.06}} &   0.48/\textcolor{darkgreen}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.06}} &   0.46/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.06}} \\
 162-movement libras & \textcolor{blue}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.06}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.07}}/  0.02 & \textcolor{blue}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.07}}/  0.02 & \textcolor{red}{\textbf{  0.06}}/\textcolor{black}{\textbf{  0.01}} \\
@@ -407,7 +407,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 161-movement libras &  \\
 162-movement libras &  \\
@@ -444,7 +444,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & TUmah & EERacu & EERent\\ \hline 193-pima indians diabe... &   0.21/\textcolor{black}{\textbf{  0.07}} &   0.19/  0.08 & \textcolor{black}{\textbf{  0.22}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{black}{\textbf{  0.22}}/\textcolor{black}{\textbf{  0.07}} &   0.21/\textcolor{black}{\textbf{  0.07}} &   0.20/  0.13 & \underline{\textcolor{blue}{\textbf{  0.24}}}/  0.08 & \textcolor{black}{\textbf{  0.22}}/  0.09 & \textcolor{red}{\textbf{  0.18}}/  0.08 \\
 194-pima indians diabe... &   0.23/  0.08 &   0.23/\textcolor{black}{\textbf{  0.07}} &   0.23/\textcolor{black}{\textbf{  0.07}} & \textcolor{black}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.07}} &   0.23/  0.08 &   0.23/  0.09 & \textcolor{black}{\textbf{  0.24}}/\textcolor{darkgreen}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.21}}/  0.08 & \underline{\textcolor{blue}{\textbf{  0.26}}}/  0.08 \\
@@ -481,7 +481,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 193-pima indians diabe... &  \\
 194-pima indians diabe... &  \\
@@ -518,7 +518,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & TUmah & EERacu & EERent\\ \hline 225-saheart &   0.13/  0.10 & \textcolor{red}{\textbf{  0.12}}/\textcolor{black}{\textbf{  0.09}} &   0.17/\textcolor{black}{\textbf{  0.09}} &   0.17/\textcolor{black}{\textbf{  0.09}} &   0.13/  0.10 & \underline{\textcolor{blue}{\textbf{  0.21}}}/  0.10 & \textcolor{black}{\textbf{  0.19}}/  0.11 & \textcolor{black}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.09}} &   0.18/  0.10 \\
 226-saheart & \textcolor{red}{\textbf{  0.13}}/  0.08 &   0.15/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.13}}/  0.09 &   0.14/  0.08 &   0.15/\textcolor{black}{\textbf{  0.07}} &   0.14/  0.08 & \textcolor{blue}{\textbf{  0.16}}/  0.08 \\
@@ -555,7 +555,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 225-saheart &  \\
 226-saheart &  \\
@@ -592,7 +592,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & TUmah & EERacu & EERent\\ \hline 257-statlog heart &   0.46/  0.11 & \textcolor{black}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.10}} &   0.46/\textcolor{black}{\textbf{  0.10}} &   0.46/\textcolor{black}{\textbf{  0.10}} &   0.46/  0.11 &   0.46/  0.11 &   0.47/  0.13 & \textcolor{red}{\textbf{  0.44}}/  0.13 & \underline{\textcolor{blue}{\textbf{  0.56}}}/  0.12 \\
 258-statlog heart & \textcolor{black}{\textbf{  0.36}}/  0.09 & \underline{\textcolor{blue}{\textbf{  0.38}}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.35}}/  0.10 & \textcolor{black}{\textbf{  0.36}}/  0.10 & \textcolor{red}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{black}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{black}{\textbf{  0.36}}/  0.10 \\
@@ -629,7 +629,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 257-statlog heart &  \\
 258-statlog heart &  \\
@@ -666,7 +666,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & TUmah & EERacu & EERent\\ \hline 289-thyroid hypothyroi... &   0.22/  0.16 &   0.23/  0.15 & \textcolor{blue}{\textbf{  0.24}}/  0.16 & \textcolor{blue}{\textbf{  0.24}}/  0.16 &   0.22/  0.16 & \textcolor{red}{\textbf{  0.11}}/\textcolor{darkgreen}{\textbf{  0.11}} &   0.18/  0.17 &   0.21/\textcolor{black}{\textbf{  0.13}} &   0.22/  0.17 \\
 290-thyroid hypothyroi... &   0.02/  0.04 &   0.14/  0.17 & \textcolor{red}{\textbf{  0.01}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.01}}/\textcolor{black}{\textbf{  0.02}} &   0.02/  0.05 &   0.02/  0.04 & \textcolor{red}{\textbf{  0.01}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.32}}}/  0.10 & \textcolor{black}{\textbf{  0.28}}/  0.21 \\
@@ -703,7 +703,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 289-thyroid hypothyroi... &  \\
 290-thyroid hypothyroi... &  \\
@@ -740,7 +740,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & TUmah & EERacu & EERent\\ \hline 321-vertebra column 2c & \textcolor{blue}{\textbf{  0.41}}/  0.11 &   0.38/  0.12 & \textcolor{blue}{\textbf{  0.41}}/\textcolor{black}{\textbf{  0.10}} & \textcolor{blue}{\textbf{  0.41}}/\textcolor{black}{\textbf{  0.10}} & \textcolor{blue}{\textbf{  0.41}}/  0.11 &   0.36/  0.11 & \textcolor{red}{\textbf{  0.35}}/  0.12 & \textcolor{red}{\textbf{  0.35}}/  0.15 &   0.39/\textcolor{black}{\textbf{  0.10}} \\
 322-vertebra column 2c &   0.35/  0.11 &   0.35/  0.09 & \textcolor{black}{\textbf{  0.40}}/\textcolor{darkgreen}{\textbf{  0.07}} & \underline{\textcolor{blue}{\textbf{  0.41}}}/  0.09 &   0.35/  0.11 & \textcolor{red}{\textbf{  0.34}}/  0.10 & \textcolor{black}{\textbf{  0.40}}/\textcolor{black}{\textbf{  0.08}} &   0.36/  0.09 &   0.39/  0.09 \\
@@ -777,7 +777,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 321-vertebra column 2c &  \\
 322-vertebra column 2c &  \\
@@ -814,7 +814,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & TUmah & EERacu & EERent\\ \hline 353-wdbc &   0.78/  0.06 & \textcolor{black}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.05}} &   0.79/\textcolor{black}{\textbf{  0.05}} &   0.79/\textcolor{black}{\textbf{  0.05}} &   0.78/  0.06 &   0.75/  0.07 & \textcolor{black}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.71}}/  0.09 & \underline{\textcolor{blue}{\textbf{  0.82}}}/  0.06 \\
 354-wdbc &   0.62/\textcolor{black}{\textbf{  0.04}} &   0.63/\textcolor{darkgreen}{\textbf{  0.03}} &   0.63/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.04}} &   0.63/  0.05 &   0.63/  0.05 & \textcolor{blue}{\textbf{  0.64}}/  0.05 & \textcolor{red}{\textbf{  0.60}}/  0.05 &   0.61/  0.07 \\
@@ -843,7 +843,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 353-wdbc &  \\
 354-wdbc &  \\
