--- a/stratsALCKappaC4.5.tex
+++ b/stratsALCKappaC4.5.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para C4.5: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para C4.5: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 1-abalone 3class &   0.31/  0.03 &   0.32/\textcolor{black}{\textbf{  0.02}} &   0.31/  0.05 &   0.31/  0.05 &   0.31/  0.04 &   0.31/  0.04 &   0.32/  0.03 &   0.32/  0.03 & \textcolor{red}{\textbf{  0.24}}/  0.07 &   0.33/\textcolor{black}{\textbf{  0.02}} &   0.32/  0.03 \\
 2-arcene & \textcolor{black}{\textbf{  0.31}}/  0.07 &   0.30/  0.06 &   0.30/  0.07 &   0.30/  0.07 &   0.30/  0.07 &   0.30/\textcolor{black}{\textbf{  0.05}} &   0.30/  0.06 & \textcolor{black}{\textbf{  0.31}}/  0.06 &   0.30/  0.07 & \underline{\textcolor{blue}{\textbf{  0.32}}}/\textcolor{black}{\textbf{  0.05}} &   0.30/\textcolor{black}{\textbf{  0.05}} \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para C4.5: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para C4.5: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 1-abalone 3class &   0.32/  0.04 & \textcolor{blue}{\textbf{  0.34}}/  0.03 & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.02}} &   0.33/  0.03 &   0.33/\textcolor{black}{\textbf{  0.02}} &   0.33/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.34}}/  0.03 &   0.33/  0.03 \\
 2-arcene & \textcolor{black}{\textbf{  0.31}}/  0.06 & \textcolor{black}{\textbf{  0.31}}/  0.06 &   0.30/  0.06 &   0.29/  0.06 &   0.30/  0.06 &   0.03/  0.77 & \textcolor{black}{\textbf{  0.31}}/  0.06 & \textcolor{red}{\textbf{ -0.07}}/  0.86 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para C4.5: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para C4.5: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 33-leukemia haslinger &   0.36/  0.11 &   0.37/  0.11 &   0.37/  0.11 &   0.37/  0.11 &   0.37/  0.11 &   0.37/\textcolor{black}{\textbf{  0.10}} &   0.37/  0.11 &   0.36/  0.11 &   0.37/\textcolor{black}{\textbf{  0.10}} & \textcolor{blue}{\textbf{  0.38}}/\textcolor{black}{\textbf{  0.10}} &   0.37/\textcolor{black}{\textbf{  0.10}} \\
 34-mammographic mass &   0.58/  0.04 &   0.58/  0.05 &   0.57/  0.06 &   0.57/  0.06 &   0.57/  0.06 &   0.58/  0.05 &   0.58/  0.04 & \textcolor{blue}{\textbf{  0.59}}/  0.04 &   0.54/  0.08 &   0.57/  0.09 & \textcolor{blue}{\textbf{  0.59}}/  0.06 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para C4.5: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para C4.5: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 33-leukemia haslinger &   0.37/  0.11 & \textcolor{blue}{\textbf{  0.38}}/\textcolor{darkgreen}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.38}}/  0.11 & \textcolor{blue}{\textbf{  0.38}}/\textcolor{black}{\textbf{  0.10}} &   0.36/\textcolor{black}{\textbf{  0.10}} & \textcolor{red}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.10}} &   0.37/  0.11 &   0.36/  0.12 \\
 34-mammographic mass &   0.58/  0.06 & \textcolor{blue}{\textbf{  0.59}}/  0.05 &   0.58/  0.05 &   0.58/  0.05 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para C4.5: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para C4.5: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 65-statlog heart &   0.50/\textcolor{black}{\textbf{  0.06}} &   0.48/  0.07 &   0.48/\textcolor{black}{\textbf{  0.06}} &   0.48/\textcolor{black}{\textbf{  0.06}} &   0.48/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.47}}/  0.07 &   0.49/  0.07 & \textcolor{blue}{\textbf{  0.51}}/  0.07 & \textcolor{red}{\textbf{  0.47}}/  0.08 &   0.49/  0.08 &   0.50/  0.07 \\
 66-statlog image segm... &   0.77/  0.02 &   0.76/  0.02 &   0.76/  0.03 &   0.76/  0.03 &   0.76/  0.03 &   0.77/  0.02 &   0.77/  0.03 &   0.77/  0.03 & \textcolor{red}{\textbf{  0.46}}/  0.08 &   0.78/  0.03 & \textcolor{black}{\textbf{  0.80}}/  0.02 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para C4.5: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para C4.5: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 65-statlog heart &   0.50/  0.07 &   0.49/  0.07 & \textcolor{red}{\textbf{  0.47}}/  0.07 &   0.48/  0.07 & \textcolor{blue}{\textbf{  0.51}}/  0.07 & \textcolor{blue}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.06}} &   0.49/\textcolor{black}{\textbf{  0.06}} &   0.50/\textcolor{black}{\textbf{  0.06}} \\
 66-statlog image segm... &   0.79/  0.03 & \textcolor{black}{\textbf{  0.80}}/  0.02 &   0.77/  0.02 &   0.79/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.01}} &   0.78/  0.02 & \underline{\textcolor{blue}{\textbf{  0.81}}}/  0.02 &   0.79/\textcolor{black}{\textbf{  0.01}} \\
