--- a/stratsALCKappaCIELM.tex
+++ b/stratsALCKappaCIELM.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 1-abalone 3class &   0.32/\textcolor{black}{\textbf{  0.04}} &   0.31/  0.06 & \textcolor{red}{\textbf{  0.26}}/  0.10 & \textcolor{red}{\textbf{  0.26}}/  0.11 &   0.29/  0.10 &   0.32/  0.05 &   0.32/  0.05 &   0.32/\textcolor{black}{\textbf{  0.04}} &   0.27/  0.08 &   0.33/  0.07 &   0.31/  0.05 \\
 2-arcene &   0.17/  0.21 &   0.15/  0.20 &   0.19/\textcolor{black}{\textbf{  0.17}} &   0.19/\textcolor{black}{\textbf{  0.17}} &   0.19/\textcolor{black}{\textbf{  0.17}} &   0.16/\textcolor{black}{\textbf{  0.17}} &   0.20/\textcolor{black}{\textbf{  0.17}} &   0.19/  0.22 & \textcolor{blue}{\textbf{  0.21}}/\textcolor{darkgreen}{\textbf{  0.16}} &   0.14/  0.19 & \textcolor{blue}{\textbf{  0.21}}/  0.18 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 1-abalone 3class &   0.33/  0.05 &   0.32/\textcolor{black}{\textbf{  0.04}} & \underline{\textcolor{blue}{\textbf{  0.35}}}/  0.06 &   0.32/  0.05 &   0.32/\textcolor{black}{\textbf{  0.04}} &   0.32/  0.05 &   0.33/  0.05 & \textcolor{black}{\textbf{  0.34}}/  0.05 \\
 2-arcene &   0.15/\textcolor{black}{\textbf{  0.17}} &   0.20/  0.18 &   0.20/\textcolor{black}{\textbf{  0.17}} &   0.15/  0.22 &   0.11/  0.48 &  -0.23/  0.91 &   0.15/  0.48 & \textcolor{red}{\textbf{ -0.32}}/  0.98 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.36}}/  0.32 &   0.44/  0.24 &   0.43/  0.24 &   0.43/  0.24 &   0.43/  0.24 &   0.39/  0.25 &   0.41/  0.24 &   0.42/  0.26 &   0.43/  0.26 &   0.44/  0.24 &   0.43/  0.24 \\
 34-mammographic mass &   0.49/  0.09 &   0.49/  0.11 &   0.48/  0.11 &   0.48/  0.11 &   0.48/  0.11 &   0.47/  0.15 &   0.50/  0.10 &   0.48/  0.08 &   0.45/  0.13 &   0.49/  0.21 & \underline{\textcolor{blue}{\textbf{  0.52}}}/  0.08 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 33-leukemia haslinger &   0.44/  0.24 & \textcolor{blue}{\textbf{  0.45}}/\textcolor{black}{\textbf{  0.22}} & \textcolor{blue}{\textbf{  0.45}}/  0.28 &   0.38/  0.26 &   0.42/  0.27 &   0.42/  0.25 & \textcolor{blue}{\textbf{  0.45}}/\textcolor{darkgreen}{\textbf{  0.21}} &   0.39/  0.25 \\
 34-mammographic mass & \textcolor{black}{\textbf{  0.51}}/  0.11 &   0.50/  0.08 & \textcolor{black}{\textbf{  0.51}}/  0.11 &   0.50/  0.09 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 65-statlog heart & \textcolor{red}{\textbf{  0.47}}/  0.16 &   0.48/  0.18 & \textcolor{black}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.15}} & \textcolor{black}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.15}} & \textcolor{black}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.15}} &   0.50/  0.16 & \textcolor{black}{\textbf{  0.51}}/  0.17 &   0.48/  0.17 &   0.50/  0.16 & \textcolor{black}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.15}} &   0.48/  0.18 \\
 66-statlog image segm... &   0.64/  0.04 &   0.67/  0.04 &   0.52/  0.07 &   0.51/  0.08 &   0.73/  0.05 &   0.62/  0.04 &   0.68/  0.05 &   0.61/  0.05 & \textcolor{red}{\textbf{  0.44}}/  0.05 & \textcolor{black}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.03}} &   0.67/  0.04 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 65-statlog heart & \textcolor{black}{\textbf{  0.51}}/  0.16 &   0.49/  0.16 & \underline{\textcolor{blue}{\textbf{  0.52}}}/  0.16 &   0.50/  0.17 & \textcolor{black}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.15}} &   0.50/  0.16 &   0.50/  0.17 & \textcolor{black}{\textbf{  0.51}}/  0.17 \\
 66-statlog image segm... &   0.72/  0.04 &   0.67/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.75}}}/  0.04 &   0.68/\textcolor{black}{\textbf{  0.03}} &   0.68/  0.04 &   0.69/\textcolor{black}{\textbf{  0.03}} &   0.69/\textcolor{black}{\textbf{  0.03}} &   0.70/\textcolor{black}{\textbf{  0.03}} \\
