--- a/stratsALCKappaCIELMRedux.tex
+++ b/stratsALCKappaCIELMRedux.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & DWeuc\\ \hline 1-abalone 3class &   0.21/  0.03 &   0.21/  0.03 &   0.23/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.25}}/\textcolor{black}{\textbf{  0.02}} &   0.24/  0.03 &   0.24/\textcolor{black}{\textbf{  0.02}} &   0.24/\textcolor{black}{\textbf{  0.02}} &   0.24/  0.03 &   0.22/\textcolor{black}{\textbf{  0.02}} &   0.24/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.19}}/  0.04 \\
 2-arcene &   0.08/\textcolor{black}{\textbf{  0.03}} &   0.08/\textcolor{black}{\textbf{  0.03}} &   0.08/  0.04 &   0.08/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.09}}/\textcolor{black}{\textbf{  0.03}} &   0.08/  0.04 &   0.08/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.09}}/\textcolor{black}{\textbf{  0.03}} &   0.08/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.09}}/\textcolor{black}{\textbf{  0.03}} \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c}
  & TUeuc & TUman & TUmah\\ \hline 1-abalone 3class & \textcolor{blue}{\textbf{  0.25}}/  0.03 &   0.24/  0.03 & \textcolor{blue}{\textbf{  0.25}}/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene & \textcolor{blue}{\textbf{  0.09}}/\textcolor{black}{\textbf{  0.03}} &   0.08/  0.04 &   0.08/\textcolor{black}{\textbf{  0.03}} \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & DWeuc\\ \hline 33-leukemia haslinger &   0.19/\textcolor{darkgreen}{\textbf{  0.04}} &   0.20/\textcolor{black}{\textbf{  0.05}} &   0.20/  0.06 &   0.19/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.21}}/\textcolor{black}{\textbf{  0.05}} &   0.20/\textcolor{black}{\textbf{  0.05}} &   0.19/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.21}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.18}}/  0.06 &   0.20/  0.06 & \underline{\textcolor{blue}{\textbf{  0.22}}}/  0.06 \\
 34-mammographic mass & \textcolor{red}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.05}} &   0.41/  0.06 &   0.40/  0.07 &   0.39/  0.06 &   0.41/  0.06 &   0.40/  0.07 &   0.39/  0.06 &   0.43/\textcolor{black}{\textbf{  0.05}} &   0.47/\textcolor{black}{\textbf{  0.05}} & \underline{\textcolor{blue}{\textbf{  0.49}}}/  0.07 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c}
  & TUeuc & TUman & TUmah\\ \hline 33-leukemia haslinger &   0.20/  0.07 & \textcolor{black}{\textbf{  0.21}}/  0.06 &   0.19/  0.06 \\
 34-mammographic mass &   0.43/  0.06 &   0.46/  0.06 & \textcolor{black}{\textbf{  0.48}}/  0.06 \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & DWeuc\\ \hline 65-statlog heart &   0.34/\textcolor{darkgreen}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.05}} &   0.37/\textcolor{black}{\textbf{  0.05}} &   0.36/\textcolor{black}{\textbf{  0.05}} &   0.35/  0.06 &   0.37/\textcolor{black}{\textbf{  0.05}} &   0.36/\textcolor{black}{\textbf{  0.05}} &   0.35/  0.06 &   0.34/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.38}}/  0.06 &   0.35/\textcolor{black}{\textbf{  0.05}} \\
 66-statlog image segm... &   0.45/  0.02 &   0.41/  0.02 & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} &   0.51/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} &   0.51/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} &   0.48/  0.02 &   0.50/  0.02 & \textcolor{red}{\textbf{  0.17}}/  0.02 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c}
  & TUeuc & TUman & TUmah\\ \hline 65-statlog heart & \textcolor{blue}{\textbf{  0.38}}/  0.06 & \textcolor{blue}{\textbf{  0.38}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.38}}/  0.06 \\
 66-statlog image segm... & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.53}}}/  0.02 \\
