--- a/stratsALCKappaNB.tex
+++ b/stratsALCKappaNB.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 1-abalone 3class &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.25/  0.10 & \textcolor{red}{\textbf{  0.21}}/  0.12 &   0.30/  0.09 &   0.34/  0.03 &   0.31/  0.05 &   0.34/  0.04 &   0.27/  0.08 &   0.34/  0.04 &   0.35/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene &   0.33/  0.10 &   0.32/\textcolor{black}{\textbf{  0.09}} & \textcolor{black}{\textbf{  0.35}}/  0.10 &   0.32/  0.10 & \textcolor{black}{\textbf{  0.35}}/  0.10 &   0.32/  0.11 &   0.31/  0.10 &   0.33/  0.10 & \textcolor{black}{\textbf{  0.35}}/  0.10 & \textcolor{black}{\textbf{  0.35}}/  0.10 &   0.33/  0.10 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 1-abalone 3class &   0.34/  0.04 & \textcolor{black}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.02}} &   0.29/  0.08 &   0.35/\textcolor{black}{\textbf{  0.02}} &   0.35/\textcolor{black}{\textbf{  0.02}} &   0.35/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.37}}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.36}}/  0.03 \\
 2-arcene & \textcolor{black}{\textbf{  0.35}}/  0.10 &   0.33/  0.10 & \textcolor{black}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.09}} &   0.31/  0.10 &   0.34/\textcolor{black}{\textbf{  0.09}} & \textcolor{red}{\textbf{  0.25}}/  0.48 & \underline{\textcolor{blue}{\textbf{  0.36}}}/  0.11 &   0.27/  0.48 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 33-leukemia haslinger &   0.67/  0.12 &   0.68/  0.12 &   0.65/  0.12 &   0.66/  0.12 &   0.65/  0.12 &   0.65/\textcolor{black}{\textbf{  0.11}} & \textcolor{red}{\textbf{  0.62}}/  0.13 &   0.68/\textcolor{black}{\textbf{  0.11}} &   0.65/  0.12 &   0.65/  0.12 & \textcolor{blue}{\textbf{  0.69}}/  0.13 \\
 34-mammographic mass & \textcolor{black}{\textbf{  0.55}}/  0.07 &   0.53/  0.07 &   0.41/  0.10 &   0.40/  0.10 &   0.37/  0.17 &   0.48/  0.09 &   0.50/  0.07 &   0.46/  0.11 &   0.37/  0.13 &   0.35/  0.14 & \underline{\textcolor{blue}{\textbf{  0.56}}}/  0.05 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 33-leukemia haslinger &   0.65/  0.12 & \textcolor{blue}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.11}} &   0.67/  0.12 & \textcolor{blue}{\textbf{  0.69}}/  0.12 &   0.67/  0.12 & \textcolor{blue}{\textbf{  0.69}}/  0.13 &   0.67/\textcolor{black}{\textbf{  0.11}} &   0.66/  0.13 \\
 34-mammographic mass &   0.28/  0.21 & \textcolor{black}{\textbf{  0.55}}/  0.05 &   0.32/  0.18 &   0.54/  0.07 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 65-statlog heart &   0.61/  0.08 &   0.61/  0.09 &   0.44/  0.11 &   0.42/  0.14 &   0.44/  0.11 &   0.47/  0.15 &   0.57/  0.09 &   0.58/  0.12 & \textcolor{red}{\textbf{  0.41}}/  0.13 &   0.44/  0.11 &   0.62/  0.10 \\
 66-statlog image segm... &   0.69/  0.03 &   0.68/  0.04 &   0.63/  0.07 &   0.58/  0.06 &   0.62/  0.07 &   0.68/  0.03 &   0.62/  0.09 & \textcolor{black}{\textbf{  0.73}}/  0.03 & \textcolor{red}{\textbf{  0.54}}/  0.08 &   0.70/  0.05 &   0.71/  0.03 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 65-statlog heart &   0.44/  0.13 & \textcolor{black}{\textbf{  0.63}}/  0.09 &   0.43/  0.18 &   0.59/\textcolor{black}{\textbf{  0.07}} & \underline{\textcolor{blue}{\textbf{  0.64}}}/  0.09 &   0.60/\textcolor{black}{\textbf{  0.07}} &   0.54/  0.15 &   0.45/  0.17 \\
 66-statlog image segm... &   0.71/  0.03 &   0.72/\textcolor{black}{\textbf{  0.02}} &   0.67/  0.06 &   0.68/  0.03 & \underline{\textcolor{blue}{\textbf{  0.74}}}/\textcolor{black}{\textbf{  0.02}} &   0.72/  0.03 & \textcolor{black}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.02}} &   0.71/  0.03 \\
