--- a/stratsALCKappaNBRedux.tex
+++ b/stratsALCKappaNBRedux.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & DWeuc\\ \hline 1-abalone 3class &   0.32/  0.03 &   0.32/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.33}}/  0.03 &   0.32/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.33}}/  0.03 & \textcolor{black}{\textbf{  0.33}}/  0.03 &   0.31/  0.05 & \textcolor{red}{\textbf{  0.25}}/  0.05 \\
 2-arcene &   0.34/  0.10 &   0.35/  0.10 &   0.34/  0.10 &   0.34/  0.11 & \textcolor{red}{\textbf{  0.32}}/  0.10 &   0.40/  0.10 &   0.40/  0.10 & \textcolor{blue}{\textbf{  0.41}}/\textcolor{black}{\textbf{  0.09}} &   0.38/  0.10 & \textcolor{blue}{\textbf{  0.41}}/\textcolor{black}{\textbf{  0.09}} &   0.39/\textcolor{black}{\textbf{  0.09}} \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c}
  & TUeuc & TUman & TUmah\\ \hline 1-abalone 3class &   0.32/  0.03 & \underline{\textcolor{blue}{\textbf{  0.34}}}/\textcolor{black}{\textbf{  0.02}} &   0.32/  0.03 \\
 2-arcene &   0.38/\textcolor{black}{\textbf{  0.09}} &   0.39/\textcolor{black}{\textbf{  0.09}} & \textcolor{blue}{\textbf{  0.41}}/\textcolor{black}{\textbf{  0.09}} \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & DWeuc\\ \hline 33-leukemia haslinger & \textcolor{blue}{\textbf{  0.64}}/  0.13 & \textcolor{blue}{\textbf{  0.64}}/  0.13 & \textcolor{blue}{\textbf{  0.64}}/  0.14 &   0.63/  0.15 &   0.63/  0.14 &   0.61/  0.13 &   0.60/  0.14 & \textcolor{red}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.11}} &   0.63/  0.13 &   0.59/  0.12 & \textcolor{red}{\textbf{  0.58}}/  0.13 \\
 34-mammographic mass &   0.57/  0.05 &   0.57/  0.05 &   0.57/  0.05 &   0.57/  0.05 & \underline{\textcolor{blue}{\textbf{  0.59}}}/\textcolor{black}{\textbf{  0.04}} &   0.56/  0.05 &   0.56/  0.05 & \textcolor{black}{\textbf{  0.58}}/  0.05 &   0.57/  0.05 &   0.56/  0.05 & \textcolor{red}{\textbf{  0.49}}/  0.05 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c}
  & TUeuc & TUman & TUmah\\ \hline 33-leukemia haslinger &   0.61/  0.13 &   0.60/  0.14 & \textcolor{red}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.11}} \\
 34-mammographic mass &   0.56/\textcolor{black}{\textbf{  0.04}} &   0.56/  0.05 & \textcolor{black}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.04}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & \textbf{SGmulti} & Mar & DWeuc\\ \hline 65-statlog heart &   0.54/  0.09 &   0.53/  0.08 & \textcolor{blue}{\textbf{  0.55}}/  0.09 & \textcolor{blue}{\textbf{  0.55}}/  0.08 &   0.54/  0.09 &   0.53/  0.07 &   0.54/  0.07 &   0.53/\textcolor{black}{\textbf{  0.06}} &   0.54/  0.09 &   0.53/  0.07 &   0.52/  0.08 \\
 66-statlog image segm... &   0.75/  0.03 &   0.77/  0.02 &   0.78/  0.02 &   0.79/  0.02 &   0.77/  0.02 &   0.82/\textcolor{black}{\textbf{  0.01}} &   0.82/  0.02 & \textcolor{blue}{\textbf{  0.83}}/  0.02 &   0.80/  0.02 &   0.79/  0.03 & \textcolor{red}{\textbf{  0.63}}/  0.05 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c}
  & TUeuc & TUman & TUmah\\ \hline 65-statlog heart & \textcolor{red}{\textbf{  0.51}}/  0.07 &   0.52/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.51}}/  0.08 \\
 66-statlog image segm... &   0.82/  0.02 & \textcolor{blue}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.01}} &   0.82/\textcolor{black}{\textbf{  0.01}} \\
