--- a/stratsALCKappaRF.tex
+++ b/stratsALCKappaRF.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RF: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RF: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 1-abalone 3class &   0.36/  0.03 &   0.37/  0.02 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} &   0.34/  0.09 &   0.36/  0.04 &   0.36/  0.04 &   0.37/  0.03 &   0.28/  0.10 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} \\
 2-arcene &   0.49/  0.09 &   0.49/  0.08 &   0.51/  0.09 &   0.51/  0.09 &   0.51/  0.09 &   0.52/\textcolor{black}{\textbf{  0.07}} &   0.51/  0.08 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.07}} &   0.52/  0.08 &   0.54/  0.09 &   0.50/  0.09 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RF: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RF: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 1-abalone 3class & \textcolor{black}{\textbf{  0.38}}/  0.02 & \textcolor{black}{\textbf{  0.38}}/  0.03 & \textcolor{black}{\textbf{  0.38}}/  0.03 &   0.37/  0.03 &   0.37/  0.02 &   0.37/  0.03 & \textcolor{black}{\textbf{  0.38}}/  0.03 & \underline{\textcolor{blue}{\textbf{  0.39}}}/  0.03 \\
 2-arcene &   0.54/\textcolor{black}{\textbf{  0.07}} &   0.50/  0.09 &   0.49/  0.08 &   0.48/  0.09 & \textcolor{blue}{\textbf{  0.55}}/  0.08 & \textcolor{red}{\textbf{  0.12}}/  0.95 &   0.47/  0.52 & \textcolor{red}{\textbf{  0.12}}/  0.95 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RF: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RF: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 33-leukemia haslinger &   0.64/  0.14 &   0.64/  0.13 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.66}}/  0.12 &   0.65/  0.13 &   0.64/  0.15 &   0.65/  0.14 &   0.65/  0.13 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} \\
 34-mammographic mass &   0.57/  0.04 &   0.58/  0.06 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{black}{\textbf{  0.61}}/  0.06 &   0.60/  0.06 &   0.59/  0.05 &   0.59/  0.04 &   0.60/  0.05 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RF: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RF: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 33-leukemia haslinger & \textcolor{blue}{\textbf{  0.66}}/  0.13 &   0.64/  0.14 & \textcolor{blue}{\textbf{  0.66}}/  0.13 &   0.64/  0.14 & \textcolor{blue}{\textbf{  0.66}}/  0.13 & \textcolor{blue}{\textbf{  0.66}}/  0.14 & \textcolor{blue}{\textbf{  0.66}}/  0.13 &   0.65/  0.13 \\
 34-mammographic mass & \textcolor{black}{\textbf{  0.61}}/  0.06 &   0.59/  0.06 & \underline{\textcolor{blue}{\textbf{  0.62}}}/  0.05 &   0.57/  0.05 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RF: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RF: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 65-statlog heart &   0.59/  0.08 &   0.57/  0.07 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} &   0.59/  0.07 &   0.59/  0.07 &   0.58/  0.09 & \textcolor{blue}{\textbf{  0.60}}/  0.08 &   0.59/  0.08 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} \\
 66-statlog image segm... &   0.84/  0.02 &   0.86/  0.02 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} &   0.89/  0.02 &   0.88/  0.01 &   0.87/  0.01 &   0.89/  0.01 &   0.70/  0.03 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RF: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RF: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 65-statlog heart & \textcolor{blue}{\textbf{  0.60}}/  0.09 &   0.59/  0.09 & \textcolor{blue}{\textbf{  0.60}}/  0.08 &   0.58/  0.08 &   0.59/  0.08 &   0.59/  0.08 & \textcolor{blue}{\textbf{  0.60}}/  0.08 &   0.59/  0.07 \\
 66-statlog image segm... & \underline{\textcolor{blue}{\textbf{  0.91}}}/  0.01 &   0.88/  0.01 & \textcolor{black}{\textbf{  0.90}}/  0.01 &   0.86/  0.01 &   0.89/  0.01 &   0.88/  0.01 &   0.89/  0.01 &   0.88/  0.01 \\
