--- a/stratsALCKappaRFRedux.tex
+++ b/stratsALCKappaRFRedux.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RF: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RF: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 1-abalone 3class &   0.36/  0.03 &   0.37/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.34}}/  0.09 &   0.36/  0.04 &   0.36/  0.04 &   0.37/  0.03 & \textcolor{blue}{\textbf{  0.38}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.38}}/  0.03 & \textcolor{blue}{\textbf{  0.38}}/  0.03 &   0.37/  0.03 \\
 2-arcene &   0.49/  0.09 &   0.49/  0.08 &   0.51/  0.09 &   0.52/\textcolor{black}{\textbf{  0.07}} &   0.51/  0.08 & \underline{\textcolor{blue}{\textbf{  0.55}}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.07}} &   0.50/  0.09 &   0.49/  0.08 & \textcolor{red}{\textbf{  0.48}}/  0.09 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RF: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RF: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.64}}/  0.14 & \textcolor{red}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.13}} & \textcolor{blue}{\textbf{  0.66}}/\textcolor{darkgreen}{\textbf{  0.12}} &   0.65/\textcolor{black}{\textbf{  0.13}} & \textcolor{red}{\textbf{  0.64}}/  0.15 &   0.65/  0.14 & \textcolor{blue}{\textbf{  0.66}}/\textcolor{black}{\textbf{  0.13}} & \textcolor{red}{\textbf{  0.64}}/  0.14 & \textcolor{blue}{\textbf{  0.66}}/\textcolor{black}{\textbf{  0.13}} & \textcolor{red}{\textbf{  0.64}}/  0.14 \\
 34-mammographic mass & \textcolor{red}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.04}} &   0.58/  0.06 & \textcolor{black}{\textbf{  0.61}}/  0.06 &   0.60/  0.06 &   0.59/  0.05 &   0.59/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.61}}/  0.06 &   0.59/  0.06 & \underline{\textcolor{blue}{\textbf{  0.62}}}/  0.05 & \textcolor{red}{\textbf{  0.57}}/  0.05 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RF: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RF: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 65-statlog heart &   0.59/  0.08 & \textcolor{red}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.07}} &   0.59/\textcolor{black}{\textbf{  0.07}} &   0.59/\textcolor{black}{\textbf{  0.07}} &   0.58/  0.09 & \textcolor{blue}{\textbf{  0.60}}/  0.08 & \textcolor{blue}{\textbf{  0.60}}/  0.09 &   0.59/  0.09 & \textcolor{blue}{\textbf{  0.60}}/  0.08 &   0.58/  0.08 \\
 66-statlog image segm... & \textcolor{red}{\textbf{  0.84}}/  0.02 &   0.86/  0.02 &   0.89/  0.02 &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.87/\textcolor{black}{\textbf{  0.01}} &   0.89/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.91}}}/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.01}} &   0.86/\textcolor{black}{\textbf{  0.01}} \\
