--- a/stratsALCKappaRFwRedux.tex
+++ b/stratsALCKappaRFwRedux.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RFw: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RFw: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 1-abalone 3class &   0.36/  0.03 &   0.37/\textcolor{black}{\textbf{  0.02}} &   0.36/  0.03 & \textcolor{blue}{\textbf{  0.38}}/  0.03 &   0.37/  0.03 &   0.30/  0.09 &   0.34/  0.09 & \textcolor{red}{\textbf{  0.28}}/  0.10 & \textcolor{blue}{\textbf{  0.38}}/  0.03 & \textcolor{blue}{\textbf{  0.38}}/\textcolor{black}{\textbf{  0.02}} &   0.37/  0.03 \\
 2-arcene &   0.49/  0.09 &   0.49/  0.08 &   0.50/  0.09 &   0.50/  0.09 &   0.48/  0.09 &   0.51/  0.09 &   0.51/  0.09 &   0.52/  0.08 & \textcolor{black}{\textbf{  0.54}}/  0.09 & \textcolor{black}{\textbf{  0.54}}/  0.07 & \underline{\textcolor{blue}{\textbf{  0.55}}}/  0.07 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RFw: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RFw: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc} & QBC\\ \hline 1-abalone 3class &   0.36/  0.04 &   0.36/  0.04 & \textcolor{blue}{\textbf{  0.38}}/  0.03 &   0.36/\textcolor{black}{\textbf{  0.02}} &   0.29/  0.08 \\
 2-arcene &   0.51/  0.08 &   0.52/  0.07 &   0.49/  0.08 &   0.42/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.41}}/\textcolor{black}{\textbf{  0.06}} \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RFw: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RFw: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 33-leukemia haslinger &   0.64/  0.14 &   0.64/  0.13 &   0.65/  0.15 &   0.64/  0.14 &   0.64/  0.14 & \textcolor{blue}{\textbf{  0.66}}/  0.12 & \textcolor{blue}{\textbf{  0.66}}/  0.12 &   0.65/  0.13 &   0.65/  0.13 & \textcolor{blue}{\textbf{  0.66}}/  0.13 &   0.65/  0.14 \\
 34-mammographic mass & \textcolor{red}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.04}} &   0.58/  0.06 &   0.58/  0.07 &   0.59/  0.06 & \textcolor{red}{\textbf{  0.57}}/  0.05 &   0.59/  0.05 & \textcolor{black}{\textbf{  0.61}}/  0.06 &   0.60/  0.05 &   0.59/  0.05 & \textcolor{black}{\textbf{  0.61}}/  0.06 &   0.59/\textcolor{black}{\textbf{  0.04}} \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RFw: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RFw: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc} & QBC\\ \hline 33-leukemia haslinger &   0.64/  0.15 &   0.65/  0.13 & \textcolor{blue}{\textbf{  0.66}}/  0.13 & \textcolor{red}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.11}} &   0.57/\textcolor{black}{\textbf{  0.11}} \\
 34-mammographic mass &   0.59/  0.05 &   0.60/  0.06 & \underline{\textcolor{blue}{\textbf{  0.62}}}/  0.05 &   0.59/\textcolor{black}{\textbf{  0.04}} &   0.59/  0.06 \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RFw: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RFw: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 65-statlog heart &   0.59/  0.08 &   0.57/\textcolor{black}{\textbf{  0.07}} &   0.59/  0.09 &   0.59/  0.09 &   0.58/  0.08 &   0.59/\textcolor{black}{\textbf{  0.07}} &   0.59/\textcolor{black}{\textbf{  0.07}} &   0.59/  0.08 & \textcolor{blue}{\textbf{  0.60}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.60}}/  0.09 & \textcolor{blue}{\textbf{  0.60}}/  0.08 \\
 66-statlog image segm... &   0.84/  0.02 &   0.86/  0.02 &   0.87/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.86/\textcolor{black}{\textbf{  0.01}} &   0.86/  0.02 &   0.89/  0.02 & \textcolor{red}{\textbf{  0.70}}/  0.03 & \textcolor{black}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.91}}}/\textcolor{black}{\textbf{  0.01}} &   0.89/\textcolor{black}{\textbf{  0.01}} \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RFw: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RFw: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc} & QBC\\ \hline 65-statlog heart &   0.58/  0.09 &   0.59/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.60}}/  0.08 &   0.55/\textcolor{darkgreen}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.07}} \\
 66-statlog image segm... &   0.87/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.01}} &   0.86/\textcolor{black}{\textbf{  0.01}} &   0.83/\textcolor{black}{\textbf{  0.01}} \\
