--- a/stratsALCKappaSVM.tex
+++ b/stratsALCKappaSVM.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 1-abalone 3class &   0.24/  0.03 &   0.24/  0.04 &   0.22/  0.05 &   0.25/  0.04 &   0.26/  0.03 &   0.27/  0.04 &   0.26/  0.03 &   0.24/  0.03 & \textcolor{red}{\textbf{  0.19}}/  0.03 &   0.27/  0.03 &   0.24/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 1-abalone 3class &   0.27/\textcolor{black}{\textbf{  0.02}} &   0.24/\textcolor{black}{\textbf{  0.02}} &   0.31/  0.03 & \textcolor{blue}{\textbf{  0.32}}/  0.03 &   0.25/  0.04 &   0.31/  0.03 &   0.27/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.32}}/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \underline{\textcolor{blue}{\textbf{  0.48}}}/  0.10 & \textcolor{black}{\textbf{  0.44}}/  0.08 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} &   0.07/  0.92 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} &   0.08/  0.93 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} \\
 34-mammographic mass &   0.38/  0.07 &   0.38/  0.05 &   0.37/  0.04 &   0.37/  0.05 &   0.36/  0.06 &   0.40/  0.07 &   0.36/  0.06 &   0.38/  0.07 &   0.34/  0.05 &   0.38/  0.05 &   0.38/  0.07 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} &   0.51/  0.12 & \textcolor{blue}{\textbf{  0.65}}/  0.12 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.65}}/  0.11 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.65}}/  0.12 \\
 34-mammographic mass &   0.36/  0.07 &   0.39/  0.06 & \textcolor{black}{\textbf{  0.52}}/  0.04 & \underline{\textcolor{blue}{\textbf{  0.54}}}/  0.05 & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -2.00}}/\textcolor{black}{\textbf{  0.00}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 65-statlog heart &  -0.01/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{ -0.02}}/  0.02 &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &   0.00/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} \\
 66-statlog image segm... &  -0.01/  0.01 &  -0.01/\textcolor{black}{\textbf{  0.00}} &   0.02/  0.02 &   0.02/  0.02 &   0.02/  0.02 &   0.03/  0.01 &   0.03/  0.01 &  -0.01/  0.01 &   0.02/\textcolor{black}{\textbf{  0.00}} &   0.04/  0.01 & \textcolor{red}{\textbf{ -0.02}}/\textcolor{black}{\textbf{  0.00}} \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah} & GATU0man & GATU0mah & GATUman & GATUmah\\ \hline 65-statlog heart &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/  0.02 &   0.56/  0.07 &   0.57/  0.08 &  -0.01/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.59}}/  0.08 &  -0.01/  0.02 & \textcolor{blue}{\textbf{  0.59}}/  0.08 \\
 66-statlog image segm... &   0.03/  0.01 & \textcolor{red}{\textbf{ -0.02}}/\textcolor{black}{\textbf{  0.00}} & \underline{\textcolor{blue}{\textbf{  0.76}}}/  0.02 &   0.74/  0.01 &   0.01/  0.01 &   0.74/  0.01 &   0.02/  0.01 & \textcolor{black}{\textbf{  0.75}}/  0.01 \\
