--- a/stratsALCKappaSVMRedux.tex
+++ b/stratsALCKappaSVMRedux.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 1-abalone 3class &   0.30/  0.03 &   0.31/\textcolor{black}{\textbf{  0.02}} &   0.31/  0.03 &   0.30/  0.03 &   0.32/  0.03 &   0.29/  0.04 &   0.31/  0.03 & \textcolor{red}{\textbf{  0.18}}/  0.09 &   0.32/  0.03 & \textcolor{blue}{\textbf{  0.33}}/  0.03 &   0.30/  0.03 \\
 2-arcene &   0.47/  0.08 &   0.46/  0.09 &   0.43/  0.08 & \textcolor{red}{\textbf{  0.41}}/  0.08 &   0.44/  0.08 &   0.47/\textcolor{black}{\textbf{  0.07}} &   0.47/\textcolor{black}{\textbf{  0.07}} &   0.47/\textcolor{black}{\textbf{  0.07}} &   0.47/\textcolor{black}{\textbf{  0.07}} &   0.48/\textcolor{black}{\textbf{  0.07}} &   0.47/  0.08 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & SVMRBFbal & SVMRBFsim\\ \hline 1-abalone 3class &   0.31/  0.03 &   0.31/  0.03 &   0.30/  0.04 & \textcolor{blue}{\textbf{  0.33}}/  0.03 & \textcolor{blue}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.33}}/\textcolor{black}{\textbf{  0.02}} &   0.32/  0.03 &   0.26/  0.12 \\
 2-arcene & \textcolor{black}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.07}} & \underline{\textcolor{blue}{\textbf{  0.52}}}/  0.08 & \textcolor{black}{\textbf{  0.49}}/  0.08 &   0.46/\textcolor{black}{\textbf{  0.07}} &   0.45/\textcolor{darkgreen}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.49}}/  0.08 &   0.44/  0.10 &   0.44/  0.09 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 33-leukemia haslinger &   0.65/  0.11 &   0.67/  0.11 &   0.65/  0.11 &   0.65/  0.11 &   0.65/  0.12 & \textcolor{red}{\textbf{  0.51}}/  0.12 & \textcolor{red}{\textbf{  0.51}}/  0.12 &   0.54/  0.11 &   0.53/  0.14 &   0.56/  0.11 &   0.66/  0.11 \\
 34-mammographic mass &   0.54/\textcolor{black}{\textbf{  0.04}} &   0.53/  0.05 &   0.53/  0.05 &   0.53/  0.05 &   0.54/  0.05 &   0.51/  0.07 &   0.51/  0.06 & \textcolor{red}{\textbf{  0.48}}/  0.07 &   0.53/  0.05 &   0.52/  0.05 &   0.54/\textcolor{black}{\textbf{  0.04}} \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & SVMRBFbal & SVMRBFsim\\ \hline 33-leukemia haslinger &   0.64/  0.11 & \textcolor{black}{\textbf{  0.68}}/  0.12 & \textcolor{red}{\textbf{  0.51}}/  0.12 &   0.65/  0.11 &   0.63/\textcolor{black}{\textbf{  0.10}} &   0.61/\textcolor{black}{\textbf{  0.10}} &   0.65/  0.11 & \underline{\textcolor{blue}{\textbf{  0.69}}}/  0.11 \\
 34-mammographic mass &   0.51/  0.05 &   0.54/  0.05 &   0.53/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.55}}/  0.05 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.04}} &   0.54/  0.05 &   0.52/  0.05 &   0.53/\textcolor{black}{\textbf{  0.04}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 65-statlog heart &   0.58/  0.08 &   0.57/\textcolor{black}{\textbf{  0.07}} &   0.59/  0.09 &   0.57/  0.08 &   0.57/  0.08 & \textcolor{red}{\textbf{  0.56}}/  0.08 & \textcolor{red}{\textbf{  0.56}}/  0.08 & \textcolor{red}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.07}} &   0.58/\textcolor{black}{\textbf{  0.07}} &   0.58/\textcolor{black}{\textbf{  0.07}} &   0.58/  0.08 \\
 66-statlog image segm... &   0.71/  0.02 &   0.73/  0.02 &   0.73/  0.02 &   0.73/  0.02 &   0.74/\textcolor{black}{\textbf{  0.01}} &   0.56/  0.04 &   0.74/  0.03 & \textcolor{red}{\textbf{  0.37}}/  0.04 &   0.74/  0.02 & \textcolor{blue}{\textbf{  0.75}}/  0.02 &   0.71/  0.02 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & SVMRBFbal & SVMRBFsim\\ \hline 65-statlog heart &   0.57/  0.09 & \textcolor{blue}{\textbf{  0.60}}/\textcolor{black}{\textbf{  0.07}} &   0.57/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.60}}/\textcolor{black}{\textbf{  0.07}} &   0.59/\textcolor{black}{\textbf{  0.07}} &   0.59/\textcolor{black}{\textbf{  0.07}} &   0.59/  0.08 &   0.59/\textcolor{black}{\textbf{  0.07}} \\
 66-statlog image segm... &   0.73/  0.02 &   0.73/  0.02 & \textcolor{blue}{\textbf{  0.75}}/  0.02 & \textcolor{blue}{\textbf{  0.75}}/  0.02 &   0.74/  0.02 & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.01}} &   0.65/  0.04 &   0.69/  0.03 \\
