--- a/stratsALCKappaVFDTRedux.tex
+++ b/stratsALCKappaVFDTRedux.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para VFDT: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para VFDT: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 1-abalone 3class &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.34/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.36}}}/\textcolor{black}{\textbf{  0.02}} &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.21/  0.07 &   0.28/  0.05 & \textcolor{red}{\textbf{  0.17}}/  0.07 &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.34/  0.04 &   0.34/  0.03 \\
 2-arcene & \textcolor{blue}{\textbf{  0.33}}/  0.10 &   0.32/\textcolor{black}{\textbf{  0.09}} & \textcolor{blue}{\textbf{  0.33}}/  0.10 &   0.32/  0.10 &   0.32/  0.10 & \textcolor{red}{\textbf{  0.30}}/  0.11 & \textcolor{blue}{\textbf{  0.33}}/  0.10 & \textcolor{blue}{\textbf{  0.33}}/  0.10 & \textcolor{blue}{\textbf{  0.33}}/  0.11 &   0.32/  0.11 & \textcolor{blue}{\textbf{  0.33}}/  0.10 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para VFDT: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para VFDT: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc}\\ \hline 1-abalone 3class &   0.30/  0.06 &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.33/  0.03 & \textcolor{black}{\textbf{  0.35}}/  0.03 \\
 2-arcene &   0.32/\textcolor{black}{\textbf{  0.09}} &   0.31/  0.12 & \textcolor{blue}{\textbf{  0.33}}/  0.10 &   0.31/  0.10 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para VFDT: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para VFDT: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 33-leukemia haslinger & \textcolor{black}{\textbf{  0.66}}/  0.13 &   0.65/  0.12 & \textcolor{black}{\textbf{  0.66}}/  0.13 & \underline{\textcolor{blue}{\textbf{  0.68}}}/  0.12 & \textcolor{black}{\textbf{  0.66}}/  0.14 &   0.62/  0.12 & \textcolor{red}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.11}} &   0.62/\textcolor{black}{\textbf{  0.11}} &   0.62/  0.13 &   0.63/  0.13 & \textcolor{black}{\textbf{  0.66}}/  0.13 \\
 34-mammographic mass &   0.55/  0.06 &   0.53/  0.07 & \underline{\textcolor{blue}{\textbf{  0.58}}}/  0.06 &   0.55/\textcolor{darkgreen}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.05}} &   0.38/  0.11 &   0.39/  0.10 & \textcolor{red}{\textbf{  0.34}}/  0.11 &   0.40/  0.08 &   0.41/  0.09 &   0.44/  0.09 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para VFDT: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para VFDT: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc}\\ \hline 33-leukemia haslinger &   0.62/  0.14 & \textcolor{red}{\textbf{  0.61}}/  0.13 &   0.62/  0.14 &   0.63/  0.13 \\
 34-mammographic mass &   0.51/  0.09 &   0.50/  0.07 &   0.40/  0.10 &   0.43/  0.07 \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para VFDT: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para VFDT: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 65-statlog heart & \textcolor{black}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.08}} &   0.60/  0.09 & \underline{\textcolor{blue}{\textbf{  0.62}}}/  0.09 & \textcolor{black}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{black}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.08}} &   0.51/  0.09 &   0.53/  0.09 & \textcolor{red}{\textbf{  0.43}}/  0.14 &   0.56/  0.11 &   0.55/  0.09 &   0.56/  0.14 \\
 66-statlog image segm... &   0.67/  0.04 &   0.66/  0.03 &   0.69/  0.03 & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.09 &   0.59/  0.09 & \textcolor{red}{\textbf{  0.50}}/  0.10 &   0.65/  0.06 &   0.65/  0.06 & \underline{\textcolor{blue}{\textbf{  0.71}}}/  0.03 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para VFDT: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para VFDT: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc}\\ \hline 65-statlog heart &   0.58/  0.11 &   0.52/  0.13 &   0.55/  0.09 &   0.57/  0.09 \\
 66-statlog image segm... &   0.65/  0.04 &   0.66/  0.04 &   0.63/  0.06 &   0.68/  0.04 \\
