--- a/stratsALCKappabest.tex
+++ b/stratsALCKappabest.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para melhor aprendiz: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para melhor aprendiz: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & TUman\\ \hline 1-abalone 3class &   0.32/\textcolor{black}{\textbf{  0.04}} &   0.31/  0.06 & \textcolor{red}{\textbf{  0.26}}/  0.10 & \textcolor{red}{\textbf{  0.26}}/  0.11 &   0.29/  0.10 &   0.32/  0.05 &   0.32/  0.05 &   0.32/\textcolor{black}{\textbf{  0.04}} &   0.27/  0.08 &   0.33/  0.07 &   0.33/  0.05 \\
 2-arcene &   0.58/\textcolor{black}{\textbf{  0.07}} &   0.57/  0.09 &   0.53/  0.10 &   0.52/  0.10 &   0.52/  0.10 &   0.59/  0.11 & \textcolor{red}{\textbf{  0.51}}/  0.10 &   0.58/\textcolor{black}{\textbf{  0.07}} &   0.59/  0.09 &   0.58/  0.09 &   0.58/  0.09 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para melhor aprendiz: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para melhor aprendiz: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
  & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 1-abalone 3class & \underline{\textcolor{blue}{\textbf{  0.35}}}/  0.06 &   0.31/  0.05 &   0.32/\textcolor{black}{\textbf{  0.04}} &   0.32/  0.05 &   0.33/  0.06 & \textcolor{black}{\textbf{  0.34}}/  0.05 & \textcolor{black}{\textbf{  0.34}}/  0.05 &   0.31/  0.05 &   0.32/  0.06 &   0.32/\textcolor{black}{\textbf{  0.04}} \\
 2-arcene &   0.53/  0.10 &   0.60/  0.09 & \textcolor{blue}{\textbf{  0.62}}/  0.11 &   0.58/  0.09 &   0.58/  0.10 &   0.59/  0.10 &   0.53/  0.10 & \textcolor{blue}{\textbf{  0.62}}/  0.10 & \textcolor{blue}{\textbf{  0.62}}/  0.11 &   0.58/  0.09 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para melhor aprendiz: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para melhor aprendiz: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & TUman\\ \hline 33-leukemia haslinger &   0.67/  0.12 &   0.68/  0.12 &   0.65/  0.12 &   0.66/  0.12 &   0.65/  0.12 &   0.65/\textcolor{black}{\textbf{  0.11}} & \textcolor{red}{\textbf{  0.62}}/  0.13 &   0.68/\textcolor{black}{\textbf{  0.11}} &   0.65/  0.12 &   0.65/  0.12 &   0.65/  0.12 \\
 34-mammographic mass &   0.58/\textcolor{black}{\textbf{  0.04}} &   0.58/  0.05 &   0.57/  0.06 &   0.57/  0.06 &   0.57/  0.06 &   0.58/  0.05 &   0.58/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.54}}/  0.08 &   0.57/  0.09 &   0.58/  0.06 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para melhor aprendiz: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para melhor aprendiz: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
  & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 33-leukemia haslinger &   0.67/  0.12 & \textcolor{blue}{\textbf{  0.69}}/  0.13 & \textcolor{blue}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.11}} & \textcolor{blue}{\textbf{  0.69}}/  0.12 &   0.65/  0.12 &   0.65/  0.12 &   0.67/  0.12 &   0.68/  0.13 & \textcolor{blue}{\textbf{  0.69}}/  0.13 & \textcolor{blue}{\textbf{  0.69}}/  0.12 \\
 34-mammographic mass &   0.58/  0.05 & \textcolor{blue}{\textbf{  0.59}}/  0.06 & \textcolor{blue}{\textbf{  0.59}}/  0.05 &   0.58/  0.05 &   0.57/  0.07 &   0.58/  0.06 & \textcolor{blue}{\textbf{  0.59}}/  0.05 &   0.58/  0.05 &   0.58/  0.05 & \textcolor{blue}{\textbf{  0.59}}/  0.05 \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para melhor aprendiz: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para melhor aprendiz: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & TUman\\ \hline 65-statlog heart &   0.61/\textcolor{black}{\textbf{  0.08}} &   0.61/  0.09 &   0.44/  0.11 &   0.42/  0.14 &   0.44/  0.11 &   0.47/  0.15 &   0.57/  0.09 &   0.58/  0.12 & \textcolor{red}{\textbf{  0.41}}/  0.13 &   0.44/  0.11 &   0.44/  0.13 \\
 66-statlog image segm... &   0.80/  0.02 &   0.82/  0.02 &   0.77/  0.03 &   0.77/  0.03 &   0.77/  0.03 &   0.82/  0.02 & \textcolor{red}{\textbf{  0.75}}/  0.04 &   0.80/  0.02 &   0.76/  0.03 &   0.81/  0.02 &   0.82/  0.02 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para melhor aprendiz: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para melhor aprendiz: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
  & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 65-statlog heart &   0.43/  0.18 &   0.62/  0.10 & \textcolor{blue}{\textbf{  0.63}}/  0.09 &   0.59/\textcolor{darkgreen}{\textbf{  0.07}} &   0.44/  0.11 &   0.43/  0.13 &   0.43/  0.19 &   0.62/  0.09 & \textcolor{blue}{\textbf{  0.63}}/  0.09 &   0.60/  0.09 \\
 66-statlog image segm... &   0.83/  0.02 & \textcolor{blue}{\textbf{  0.84}}/  0.02 & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} &   0.81/  0.02 &   0.82/  0.02 & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} &   0.83/\textcolor{black}{\textbf{  0.01}} &   0.83/\textcolor{black}{\textbf{  0.01}} &   0.83/\textcolor{black}{\textbf{  0.01}} \\
