--- a/stratsBalAcc5NN.tex
+++ b/stratsBalAcc5NN.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 1-abalone 3class & \underline{\textcolor{blue}{\textbf{  0.58}}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.53}}/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.03 &   0.54/  0.03 &   0.54/  0.03 &   0.54/  0.04 & \textcolor{red}{\textbf{  0.53}}/  0.04 & \textcolor{red}{\textbf{  0.53}}/  0.03 & \textcolor{red}{\textbf{  0.53}}/  0.04 & \textcolor{black}{\textbf{  0.55}}/  0.03 \\
 2-arcene & \underline{\textcolor{blue}{\textbf{  0.87}}}/\textcolor{black}{\textbf{  0.05}} &   0.81/\textcolor{black}{\textbf{  0.05}} &   0.81/  0.06 &   0.78/  0.07 &   0.78/  0.07 &   0.78/  0.07 &   0.81/  0.07 & \textcolor{red}{\textbf{  0.76}}/  0.07 &   0.81/\textcolor{black}{\textbf{  0.05}} &   0.80/  0.07 &   0.80/  0.06 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 1-abalone 3class & \textcolor{black}{\textbf{  0.55}}/  0.03 &   0.54/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.55}}/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.04 &   0.54/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.55}}/  0.03 & \textcolor{black}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene &   0.80/\textcolor{black}{\textbf{  0.05}} &   0.79/  0.07 &   0.82/  0.06 &   0.82/  0.08 &   0.81/  0.06 &   0.80/  0.07 &   0.81/  0.06 &   0.78/  0.07 & \textcolor{black}{\textbf{  0.84}}/  0.06 &   0.83/  0.08 &   0.82/  0.06 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 33-leukemia haslinger & \textcolor{blue}{\textbf{  0.81}}/  0.09 &   0.79/  0.09 &   0.79/  0.09 &   0.80/  0.09 &   0.80/  0.09 &   0.80/  0.09 &   0.79/\textcolor{black}{\textbf{  0.08}} & \textcolor{blue}{\textbf{  0.81}}/  0.11 &   0.79/  0.09 &   0.79/\textcolor{black}{\textbf{  0.08}} &   0.80/  0.10 \\
 34-mammographic mass &   0.74/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.04}} &   0.71/  0.05 &   0.70/\textcolor{black}{\textbf{  0.04}} &   0.70/\textcolor{black}{\textbf{  0.04}} &   0.70/\textcolor{black}{\textbf{  0.04}} &   0.74/  0.05 & \textcolor{red}{\textbf{  0.69}}/  0.05 & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.04}} &   0.73/\textcolor{black}{\textbf{  0.04}} &   0.71/  0.06 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 33-leukemia haslinger &   0.80/  0.10 & \textcolor{red}{\textbf{  0.78}}/  0.09 &   0.80/  0.10 &   0.79/  0.11 & \textcolor{blue}{\textbf{  0.81}}/  0.11 &   0.80/\textcolor{black}{\textbf{  0.08}} & \textcolor{blue}{\textbf{  0.81}}/  0.09 & \textcolor{red}{\textbf{  0.78}}/  0.10 & \textcolor{red}{\textbf{  0.78}}/  0.13 & \textcolor{blue}{\textbf{  0.81}}/  0.10 &   0.79/  0.11 \\
 34-mammographic mass &   0.71/  0.05 &   0.72/\textcolor{darkgreen}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.04}} &   0.74/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.04}} &   0.70/  0.05 &   0.70/  0.05 &   0.71/\textcolor{black}{\textbf{  0.04}} &   0.74/\textcolor{black}{\textbf{  0.04}} &   0.74/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.04}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 65-statlog heart &   0.75/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.76}}/  0.05 &   0.75/  0.06 & \textcolor{red}{\textbf{  0.73}}/  0.06 & \textcolor{red}{\textbf{  0.73}}/  0.06 & \textcolor{red}{\textbf{  0.73}}/  0.06 &   0.75/  0.05 & \textcolor{red}{\textbf{  0.73}}/  0.05 & \textcolor{black}{\textbf{  0.76}}/  0.05 & \textcolor{red}{\textbf{  0.73}}/  0.06 &   0.74/  0.06 \\
 66-statlog image segm... & \underline{\textcolor{blue}{\textbf{  0.96}}}/\textcolor{darkgreen}{\textbf{  0.01}} &   0.85/\textcolor{black}{\textbf{  0.02}} &   0.87/\textcolor{black}{\textbf{  0.02}} &   0.82/  0.03 &   0.82/  0.03 &   0.82/  0.03 &   0.87/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.79}}/  0.04 &   0.85/\textcolor{black}{\textbf{  0.02}} &   0.81/  0.04 &   0.85/\textcolor{black}{\textbf{  0.02}} \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para 5NN: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para 5NN: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 65-statlog heart &   0.75/  0.05 &   0.74/  0.06 &   0.74/  0.06 &   0.75/  0.06 &   0.75/  0.05 & \textcolor{red}{\textbf{  0.73}}/  0.06 &   0.75/  0.05 &   0.74/\textcolor{black}{\textbf{  0.04}} & \underline{\textcolor{blue}{\textbf{  0.77}}}/  0.06 & \textcolor{black}{\textbf{  0.76}}/  0.05 &   0.75/\textcolor{black}{\textbf{  0.04}} \\
 66-statlog image segm... &   0.87/\textcolor{black}{\textbf{  0.02}} &   0.88/\textcolor{black}{\textbf{  0.02}} &   0.88/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.89}}/\textcolor{black}{\textbf{  0.02}} &   0.88/\textcolor{black}{\textbf{  0.02}} &   0.85/\textcolor{black}{\textbf{  0.02}} &   0.87/\textcolor{black}{\textbf{  0.02}} &   0.88/\textcolor{black}{\textbf{  0.02}} &   0.88/\textcolor{black}{\textbf{  0.02}} &   0.88/\textcolor{black}{\textbf{  0.02}} &   0.87/\textcolor{black}{\textbf{  0.02}} \\
