--- a/stratsBalAccCIELM.tex
+++ b/stratsBalAccCIELM.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 1-abalone 3class & \underline{\textcolor{blue}{\textbf{  0.60}}}/\textcolor{darkgreen}{\textbf{  0.01}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.04 & \textcolor{red}{\textbf{  0.51}}/  0.08 & \textcolor{red}{\textbf{  0.51}}/  0.08 &   0.53/  0.07 &   0.55/  0.03 &   0.55/  0.03 &   0.55/  0.03 &   0.52/  0.06 &   0.56/  0.05 \\
 2-arcene & \textcolor{blue}{\textbf{  0.65}}/\textcolor{darkgreen}{\textbf{  0.06}} &   0.59/  0.11 &   0.59/  0.12 &   0.61/  0.11 &   0.61/  0.11 &   0.61/  0.11 &   0.59/  0.10 &   0.62/  0.10 &   0.60/  0.11 &   0.61/  0.10 & \textcolor{red}{\textbf{  0.58}}/  0.10 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 1-abalone 3class &   0.56/  0.03 & \textcolor{black}{\textbf{  0.57}}/  0.03 &   0.55/  0.03 &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 &   0.56/  0.03 &   0.56/  0.03 & \textcolor{black}{\textbf{  0.57}}/  0.03 &   0.54/  0.03 &   0.55/  0.03 &   0.55/  0.03 \\
 2-arcene &   0.59/  0.10 &   0.62/  0.10 &   0.61/  0.10 &   0.62/\textcolor{black}{\textbf{  0.09}} & \textcolor{red}{\textbf{  0.58}}/  0.11 &   0.60/  0.10 &   0.60/  0.10 &   0.62/  0.10 & \textcolor{blue}{\textbf{  0.65}}/  0.10 &   0.60/  0.10 &   0.59/  0.12 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 33-leukemia haslinger & \underline{\textcolor{blue}{\textbf{  0.79}}}/  0.13 &   0.71/  0.16 &   0.74/  0.13 &   0.73/  0.13 &   0.73/  0.13 &   0.73/  0.13 &   0.71/  0.13 &   0.73/\textcolor{black}{\textbf{  0.12}} &   0.73/  0.13 &   0.72/  0.13 &   0.73/  0.13 \\
 34-mammographic mass & \underline{\textcolor{blue}{\textbf{  0.80}}}/\textcolor{darkgreen}{\textbf{  0.03}} &   0.76/\textcolor{black}{\textbf{  0.04}} &   0.76/  0.05 &   0.76/  0.06 &   0.76/  0.06 &   0.76/  0.06 & \textcolor{red}{\textbf{  0.75}}/  0.08 &   0.77/\textcolor{black}{\textbf{  0.04}} &   0.76/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.75}}/  0.07 &   0.76/  0.12 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 33-leukemia haslinger &   0.73/  0.13 &   0.75/  0.15 &   0.73/  0.13 &   0.75/\textcolor{black}{\textbf{  0.12}} & \textcolor{red}{\textbf{  0.70}}/  0.13 &   0.74/  0.13 &   0.73/  0.13 &   0.72/  0.16 &   0.74/  0.14 & \textcolor{black}{\textbf{  0.77}}/  0.13 & \textcolor{red}{\textbf{  0.70}}/  0.15 \\
 34-mammographic mass & \textcolor{black}{\textbf{  0.78}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.78}}/  0.06 &   0.77/\textcolor{black}{\textbf{  0.04}} &   0.77/\textcolor{black}{\textbf{  0.04}} &   0.76/\textcolor{black}{\textbf{  0.04}} &   0.76/  0.08 & \textcolor{black}{\textbf{  0.78}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.78}}/  0.05 &   0.77/\textcolor{black}{\textbf{  0.04}} &   0.77/\textcolor{black}{\textbf{  0.04}} &   0.76/\textcolor{black}{\textbf{  0.04}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 65-statlog heart & \underline{\textcolor{blue}{\textbf{  0.80}}}/\textcolor{darkgreen}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.08}} &   0.76/\textcolor{black}{\textbf{  0.08}} &   0.77/\textcolor{black}{\textbf{  0.08}} &   0.77/\textcolor{black}{\textbf{  0.08}} &   0.77/\textcolor{black}{\textbf{  0.08}} &   0.77/\textcolor{black}{\textbf{  0.08}} &   0.77/  0.09 & \textcolor{red}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{black}{\textbf{  0.78}}/  0.09 &   0.77/\textcolor{black}{\textbf{  0.08}} \\
 66-statlog image segm... & \textcolor{blue}{\textbf{  0.81}}/\textcolor{darkgreen}{\textbf{  0.02}} &   0.71/  0.04 &   0.75/  0.05 &   0.58/  0.07 &   0.60/  0.08 &   0.80/  0.05 &   0.69/  0.04 &   0.75/  0.05 &   0.68/  0.06 & \textcolor{red}{\textbf{  0.54}}/  0.06 & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.03}} \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para CIELM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para CIELM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 65-statlog heart & \textcolor{black}{\textbf{  0.78}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{black}{\textbf{  0.78}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{red}{\textbf{  0.75}}/  0.09 &   0.77/\textcolor{black}{\textbf{  0.08}} &   0.76/  0.09 & \textcolor{black}{\textbf{  0.78}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{black}{\textbf{  0.78}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{black}{\textbf{  0.78}}/\textcolor{black}{\textbf{  0.08}} &   0.77/  0.09 &   0.77/\textcolor{black}{\textbf{  0.08}} &   0.76/  0.09 \\
 66-statlog image segm... &   0.78/  0.04 & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.03}} &   0.74/  0.04 &   0.74/\textcolor{black}{\textbf{  0.03}} &   0.75/\textcolor{black}{\textbf{  0.03}} &   0.80/  0.04 &   0.77/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.81}}/  0.04 &   0.73/\textcolor{black}{\textbf{  0.03}} &   0.73/  0.04 &   0.75/\textcolor{black}{\textbf{  0.03}} \\
