--- a/stratsBalAccFriedsvm5nnc45vfdtnbici.tex
+++ b/stratsBalAccFriedsvm5nnc45vfdtnbici.tex
@@ -1,5 +1,5 @@
 \begin{table}[h]
-\caption{Um contra um: cada asterisco/cruz/ponto indica quando o algoritmo na linha tem melhor acur·cia balanceada que o algoritmo na coluna com intervalo de confianÁa de 0.99/0.95/0.90.}
+\caption{Um contra um: cada asterisco/cruz/ponto indica quando o algoritmo na linha tem melhor acur√°cia balanceada que o algoritmo na coluna com intervalo de confian√ßa de 0.99/0.95/0.90.}
 \begin{center}
 \begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|cc|cc|cc|cc}
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 & 15 & 16 & 17 & 18 & 19 & 20 & 21 & 22\\
