--- a/stratsBalAccNB.tex
+++ b/stratsBalAccNB.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 1-abalone 3class & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.57}}/  0.02 &   0.52/  0.07 & \textcolor{red}{\textbf{  0.48}}/  0.09 &   0.53/  0.08 & \textcolor{blue}{\textbf{  0.57}}/  0.02 &   0.54/  0.04 &   0.56/  0.04 &   0.52/  0.07 & \textcolor{blue}{\textbf{  0.57}}/  0.03 \\
 2-arcene &   0.68/  0.06 &   0.68/  0.06 &   0.69/  0.06 &   0.71/  0.07 &   0.70/  0.09 &   0.71/  0.08 &   0.69/\textcolor{darkgreen}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.67}}/  0.07 &   0.68/\textcolor{black}{\textbf{  0.05}} &   0.71/  0.07 &   0.71/  0.08 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 1-abalone 3class & \textcolor{blue}{\textbf{  0.57}}/  0.03 &   0.54/  0.06 & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.57}}/  0.02 &   0.56/  0.03 &   0.56/  0.04 &   0.53/  0.06 & \textcolor{blue}{\textbf{  0.57}}/  0.02 & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.01}} \\
 2-arcene &   0.71/  0.08 & \textcolor{blue}{\textbf{  0.72}}/  0.08 &   0.68/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.67}}/  0.07 &   0.71/  0.07 &   0.71/  0.08 & \textcolor{blue}{\textbf{  0.72}}/  0.08 &   0.68/  0.06 &   0.68/  0.06 &   0.69/  0.06 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 33-leukemia haslinger & \underline{\textcolor{blue}{\textbf{  0.89}}}/  0.07 &   0.86/  0.07 &   0.87/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.85}}/  0.08 &   0.86/  0.07 & \textcolor{red}{\textbf{  0.85}}/  0.08 & \textcolor{red}{\textbf{  0.85}}/  0.07 & \textcolor{red}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.06}} &   0.86/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.85}}/  0.08 & \textcolor{red}{\textbf{  0.85}}/  0.08 \\
 34-mammographic mass &   0.79/  0.04 &   0.79/  0.04 &   0.77/  0.04 &   0.73/  0.05 &   0.72/  0.06 &   0.72/  0.09 &   0.75/  0.06 &   0.75/  0.05 &   0.72/  0.07 &   0.70/  0.09 &   0.67/  0.08 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.85}}/  0.08 &   0.87/  0.07 & \textcolor{black}{\textbf{  0.88}}/  0.07 &   0.87/  0.07 & \textcolor{black}{\textbf{  0.88}}/  0.07 & \textcolor{red}{\textbf{  0.85}}/  0.08 & \textcolor{red}{\textbf{  0.85}}/  0.08 &   0.87/  0.07 & \textcolor{black}{\textbf{  0.88}}/  0.07 & \textcolor{black}{\textbf{  0.88}}/  0.08 &   0.87/  0.08 \\
 34-mammographic mass & \textcolor{red}{\textbf{  0.66}}/  0.13 &   0.68/  0.11 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.03}} &   0.79/\textcolor{black}{\textbf{  0.03}} &   0.78/  0.04 &   0.70/  0.09 &   0.68/  0.12 &   0.68/  0.08 &   0.79/  0.04 &   0.79/  0.04 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.03}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc\\ \hline 65-statlog heart & \underline{\textcolor{blue}{\textbf{  0.84}}}/\textcolor{black}{\textbf{  0.05}} &   0.82/\textcolor{black}{\textbf{  0.05}} &   0.82/\textcolor{black}{\textbf{  0.05}} &   0.71/  0.08 &   0.70/  0.09 &   0.71/  0.08 &   0.74/  0.11 &   0.81/  0.06 &   0.81/  0.08 & \textcolor{red}{\textbf{  0.68}}/  0.07 &   0.69/  0.07 \\
 66-statlog image segm... &   0.78/\textcolor{black}{\textbf{  0.02}} &   0.77/  0.03 &   0.76/  0.04 &   0.71/  0.08 &   0.66/  0.08 &   0.69/  0.07 &   0.77/  0.03 &   0.69/  0.10 & \underline{\textcolor{blue}{\textbf{  0.80}}}/  0.03 & \textcolor{red}{\textbf{  0.62}}/  0.09 &   0.77/  0.05 \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para NB: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para NB: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & TUman & TUmah & ATUeuc & ATUman & ATUmah & LUeuc & LUman & LUmah & ALUeuc & ALUman & ALUmah\\ \hline 65-statlog heart &   0.70/  0.09 &   0.69/  0.15 &   0.82/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.05}} &   0.82/\textcolor{darkgreen}{\textbf{  0.04}} &   0.70/  0.07 &   0.70/  0.08 &   0.69/  0.15 & \textcolor{black}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.05}} &   0.82/\textcolor{black}{\textbf{  0.05}} \\
 66-statlog image segm... &   0.78/  0.03 &   0.74/  0.06 &   0.77/  0.03 &   0.77/\textcolor{black}{\textbf{  0.02}} &   0.75/  0.05 & \textcolor{black}{\textbf{  0.79}}/  0.03 &   0.78/  0.05 &   0.76/  0.05 &   0.77/  0.04 &   0.77/  0.03 &   0.76/  0.05 \\
