--- a/stratsBalAccSVM.tex
+++ b/stratsBalAccSVM.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc\\ \hline 1-abalone 3class & \underline{\textcolor{blue}{\textbf{  0.59}}}/\textcolor{black}{\textbf{  0.02}} &   0.52/  0.03 &   0.51/  0.03 & \textcolor{red}{\textbf{  0.47}}/  0.08 &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/  0.03 &   0.53/  0.03 &   0.52/  0.03 &   0.49/  0.05 &   0.54/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & \textbf{ATUeuc} & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 1-abalone 3class &   0.51/  0.03 &   0.52/  0.04 &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.52/  0.03 & \textcolor{black}{\textbf{  0.56}}/  0.03 & \textcolor{black}{\textbf{  0.56}}/  0.03 & \textcolor{black}{\textbf{  0.56}}/  0.03 &   0.54/  0.04 \\
 2-arcene & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \underline{\textcolor{blue}{\textbf{  0.79}}}/  0.08 &   0.76/  0.08 & \textcolor{black}{\textbf{  0.77}}/  0.07 & \textcolor{black}{\textbf{  0.77}}/  0.07 \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} \\
 34-mammographic mass & \textcolor{black}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.03}} &   0.72/  0.05 &   0.73/  0.04 &   0.73/  0.05 &   0.74/  0.04 &   0.73/  0.05 &   0.74/  0.05 & \textcolor{red}{\textbf{  0.71}}/  0.04 &   0.72/  0.05 &   0.72/  0.06 &   0.73/  0.04 \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & \textbf{ATUeuc} & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{black}{\textbf{  0.87}}/  0.09 & \underline{\textcolor{blue}{\textbf{  0.89}}}/  0.07 &   0.83/  0.12 & \textcolor{black}{\textbf{  0.87}}/  0.08 \\
 34-mammographic mass &   0.74/  0.04 &   0.75/  0.04 &   0.73/\textcolor{black}{\textbf{  0.03}} &   0.72/  0.10 &   0.75/  0.04 &   0.74/  0.04 &   0.74/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.81}}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.03}} \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Pass & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc\\ \hline 65-statlog heart &   0.50/  0.02 & \textcolor{red}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.01}} &   0.50/\textcolor{darkgreen}{\textbf{  0.00}} &   0.50/\textcolor{black}{\textbf{  0.01}} &   0.50/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.01}} &   0.50/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.01}} &   0.50/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.01}} \\
 66-statlog image segm... &   0.61/  0.03 & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.01}} &   0.16/  0.02 &   0.16/  0.02 &   0.16/  0.02 &   0.17/\textcolor{black}{\textbf{  0.01}} &   0.16/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.01}} &   0.16/\textcolor{black}{\textbf{  0.01}} &   0.17/\textcolor{black}{\textbf{  0.01}} \\
@@ -183,7 +183,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{acur·cia balanceada para SVM: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{acur√°cia balanceada para SVM: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & \textbf{ATUeuc} & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 65-statlog heart & \textcolor{red}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.01}} &   0.50/\textcolor{black}{\textbf{  0.01}} &   0.50/  0.02 & \textcolor{red}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.01}} &   0.50/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.83}}/  0.05 &   0.80/  0.05 & \textcolor{blue}{\textbf{  0.83}}/  0.04 &   0.81/  0.04 \\
 66-statlog image segm... & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.01}} &   0.17/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.01}} &   0.16/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.01}} &   0.16/  0.02 & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.87}}/  0.04 &   0.86/  0.02 & \underline{\textcolor{blue}{\textbf{  0.88}}}/  0.02 &   0.85/  0.02 \\
