--- a/stratsfriedmahaall.tex
+++ b/stratsfriedmahaall.tex
@@ -1,5 +1,5 @@
 \begin{table}[h]
-\caption{Um contra um para todos os algoritmos de aprendizado. Medida: kappa médio. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
+\caption{Um contra um para todos os algoritmos de aprendizado. Medida: kappa mÃ©dio. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
 \begin{center}\begin{tabular}{lcc|cc|cc|cc|cc}
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
 1 - Rnd  	& - &   &   &   &   &   &   &   &   &   \\
