--- a/stratsmahaALCKappaAllall.tex
+++ b/stratsmahaALCKappaAllall.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{HTUmah} & \textbf{SGmulti} & Ent & Mar & DWmah & TUmah & EERacu & EERent\\ \hline 1-abalone 3class &   0.29/\textcolor{black}{\textbf{  0.03}} &   0.30/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.31}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.31}}/\textcolor{black}{\textbf{  0.03}} &   0.29/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.31}}/  0.05 & \textcolor{black}{\textbf{  0.31}}/  0.05 & \textcolor{red}{\textbf{  0.23}}/  0.09 & \underline{\textcolor{blue}{\textbf{  0.32}}}/\textcolor{black}{\textbf{  0.03}} &   0.29/  0.04 &   0.30/  0.05 \\
 2-abalone 3class &   0.32/  0.03 &   0.32/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.33}}/  0.03 & \underline{\textcolor{blue}{\textbf{  0.34}}}/\textcolor{black}{\textbf{  0.02}} &   0.32/  0.03 & \textcolor{black}{\textbf{  0.33}}/  0.03 &   0.32/  0.03 & \textcolor{red}{\textbf{  0.19}}/  0.06 & \textcolor{black}{\textbf{  0.33}}/  0.04 &   0.32/  0.03 & \textcolor{black}{\textbf{  0.33}}/  0.03 \\
@@ -37,7 +37,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 1-abalone 3class &  \\
 2-abalone 3class &  \\
@@ -74,7 +74,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{HTUmah} & \textbf{SGmulti} & Ent & Mar & DWmah & TUmah & EERacu & EERent\\ \hline 33-banknote authentic... &   0.93/  0.02 &   0.94/  0.02 & \textcolor{black}{\textbf{  0.96}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.96}}/\textcolor{black}{\textbf{  0.01}} &   0.93/  0.02 & \textcolor{black}{\textbf{  0.96}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.96}}/\textcolor{black}{\textbf{  0.01}} &   0.88/  0.06 & \underline{\textcolor{blue}{\textbf{  0.97}}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.87}}/  0.05 & \textcolor{black}{\textbf{  0.96}}/\textcolor{black}{\textbf{  0.01}} \\
 34-banknote authentic... &   0.75/  0.04 &   0.77/  0.04 &   0.79/  0.03 & \underline{\textcolor{blue}{\textbf{  0.81}}}/\textcolor{black}{\textbf{  0.02}} &   0.75/  0.05 &   0.76/  0.05 &   0.76/  0.05 & \textcolor{red}{\textbf{  0.56}}/  0.08 &   0.75/  0.08 &   0.77/  0.04 & \textcolor{black}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} \\
@@ -111,7 +111,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 33-banknote authentic... &  \\
 34-banknote authentic... &  \\
@@ -148,7 +148,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{HTUmah} & \textbf{SGmulti} & Ent & Mar & DWmah & TUmah & EERacu & EERent\\ \hline 65-connect. vowel... &   0.46/  0.03 &   0.46/  0.03 &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.46/  0.03 & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.43}}/  0.03 & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} &   0.51/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} \\
 66-connect. vowel... &   0.25/  0.03 &   0.25/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.27}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.28}}}/\textcolor{black}{\textbf{  0.02}} &   0.25/\textcolor{black}{\textbf{  0.02}} &   0.24/\textcolor{black}{\textbf{  0.02}} &   0.26/  0.03 & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.27}}/\textcolor{black}{\textbf{  0.02}} &   0.26/\textcolor{black}{\textbf{  0.02}} &   0.25/\textcolor{black}{\textbf{  0.02}} \\
@@ -185,7 +185,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 65-connect. vowel... &  \\
 66-connect. vowel... &  \\
@@ -222,7 +222,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{HTUmah} & \textbf{SGmulti} & Ent & Mar & DWmah & TUmah & EERacu & EERent\\ \hline 97-hepatitis & \textcolor{red}{\textbf{  0.31}}/  0.15 & \underline{\textcolor{blue}{\textbf{  0.38}}}/  0.15 &   0.32/  0.13 & \textcolor{red}{\textbf{  0.31}}/  0.13 & \textcolor{red}{\textbf{  0.31}}/  0.15 &   0.33/\textcolor{black}{\textbf{  0.10}} &   0.33/\textcolor{black}{\textbf{  0.10}} &   0.34/  0.15 &   0.35/  0.11 &   0.34/  0.12 & \textcolor{black}{\textbf{  0.37}}/  0.13 \\
 98-hepatitis &   0.24/  0.13 & \textcolor{blue}{\textbf{  0.27}}/  0.13 &   0.25/\textcolor{black}{\textbf{  0.10}} &   0.22/  0.12 &   0.23/  0.13 &   0.22/  0.14 &   0.22/  0.14 & \textcolor{red}{\textbf{  0.13}}/\textcolor{darkgreen}{\textbf{  0.08}} &   0.23/  0.12 &   0.26/  0.14 & \textcolor{blue}{\textbf{  0.27}}/  0.12 \\
@@ -259,7 +259,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 97-hepatitis &  \\
 98-hepatitis &  \\
@@ -296,7 +296,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{HTUmah} & \textbf{SGmulti} & Ent & Mar & DWmah & TUmah & EERacu & EERent\\ \hline 129-leukemia haslinger &   0.57/  0.15 &   0.59/\textcolor{black}{\textbf{  0.13}} & \textcolor{blue}{\textbf{  0.60}}/  0.16 & \textcolor{blue}{\textbf{  0.60}}/  0.16 &   0.57/  0.15 &   0.58/\textcolor{black}{\textbf{  0.13}} &   0.58/\textcolor{black}{\textbf{  0.13}} & \textcolor{red}{\textbf{  0.52}}/\textcolor{darkgreen}{\textbf{  0.11}} &   0.57/  0.14 & \textcolor{blue}{\textbf{  0.60}}/  0.14 &   0.54/  0.14 \\
 130-leukemia haslinger & \textcolor{black}{\textbf{  0.36}}/  0.11 & \underline{\textcolor{blue}{\textbf{  0.37}}}/  0.11 & \textcolor{black}{\textbf{  0.36}}/  0.11 & \textcolor{black}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.10}} &   0.35/  0.12 & \textcolor{red}{\textbf{  0.34}}/  0.14 & \textcolor{red}{\textbf{  0.34}}/  0.14 & \textcolor{black}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.10}} &   0.35/\textcolor{black}{\textbf{  0.10}} & \textcolor{black}{\textbf{  0.36}}/  0.12 & \textcolor{black}{\textbf{  0.36}}/  0.12 \\
@@ -333,7 +333,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 129-leukemia haslinger &  \\
 130-leukemia haslinger &  \\
@@ -370,7 +370,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{HTUmah} & \textbf{SGmulti} & Ent & Mar & DWmah & TUmah & EERacu & EERent\\ \hline 161-movement libras &   0.63/\textcolor{black}{\textbf{  0.04}} &   0.64/  0.05 &   0.67/  0.05 &   0.67/  0.05 &   0.63/\textcolor{black}{\textbf{  0.04}} &   0.67/\textcolor{black}{\textbf{  0.04}} &   0.67/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.04}} & \underline{\textcolor{blue}{\textbf{  0.69}}}/  0.05 &   0.63/  0.05 & \textcolor{black}{\textbf{  0.68}}/  0.05 \\
 162-movement libras &   0.25/\textcolor{black}{\textbf{  0.02}} &   0.25/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.26}}/  0.03 & \textcolor{blue}{\textbf{  0.26}}/  0.03 &   0.25/  0.03 &   0.25/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.26}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.22}}/  0.03 &   0.25/  0.03 &   0.25/\textcolor{black}{\textbf{  0.02}} &   0.25/\textcolor{black}{\textbf{  0.02}} \\
@@ -407,7 +407,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 161-movement libras &  \\
 162-movement libras &  \\
@@ -444,7 +444,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{HTUmah} & \textbf{SGmulti} & Ent & Mar & DWmah & TUmah & EERacu & EERent\\ \hline 193-pima indians diabe... & \textcolor{blue}{\textbf{  0.27}}/\textcolor{black}{\textbf{  0.06}} &   0.24/\textcolor{black}{\textbf{  0.06}} &   0.25/\textcolor{black}{\textbf{  0.06}} &   0.25/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.27}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.27}}/  0.07 & \textcolor{blue}{\textbf{  0.27}}/  0.07 & \textcolor{red}{\textbf{  0.18}}/  0.07 & \textcolor{blue}{\textbf{  0.27}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.27}}/  0.07 &   0.26/\textcolor{black}{\textbf{  0.06}} \\
 194-pima indians diabe... &   0.32/\textcolor{black}{\textbf{  0.05}} &   0.32/  0.06 &   0.32/  0.07 & \textcolor{blue}{\textbf{  0.34}}/  0.06 &   0.32/\textcolor{darkgreen}{\textbf{  0.04}} &   0.33/\textcolor{black}{\textbf{  0.05}} &   0.33/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.21}}/  0.07 & \textcolor{blue}{\textbf{  0.34}}/  0.06 &   0.32/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.05}} \\
@@ -481,7 +481,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 193-pima indians diabe... &  \\
 194-pima indians diabe... &  \\
@@ -518,7 +518,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{HTUmah} & \textbf{SGmulti} & Ent & Mar & DWmah & TUmah & EERacu & EERent\\ \hline 225-saheart &   0.15/  0.08 &   0.15/  0.08 &   0.17/  0.08 &   0.17/  0.08 &   0.15/  0.08 & \textcolor{blue}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.13}}/  0.08 &   0.18/  0.08 &   0.19/\textcolor{black}{\textbf{  0.07}} &   0.18/  0.08 \\
 226-saheart &   0.20/\textcolor{black}{\textbf{  0.05}} &   0.20/  0.06 &   0.20/  0.06 & \underline{\textcolor{blue}{\textbf{  0.23}}}/  0.06 & \textcolor{black}{\textbf{  0.21}}/  0.06 &   0.20/  0.06 &   0.20/  0.06 & \textcolor{red}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.21}}/  0.07 &   0.20/  0.07 & \textcolor{black}{\textbf{  0.21}}/  0.07 \\
@@ -555,7 +555,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 225-saheart &  \\
 226-saheart &  \\
@@ -592,7 +592,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{HTUmah} & \textbf{SGmulti} & Ent & Mar & DWmah & TUmah & EERacu & EERent\\ \hline 257-statlog heart &   0.49/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.52}}/  0.08 &   0.49/  0.08 &   0.49/  0.08 &   0.49/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.48}}/  0.08 & \textcolor{red}{\textbf{  0.48}}/  0.08 & \textcolor{red}{\textbf{  0.48}}/  0.09 &   0.49/  0.10 & \textcolor{red}{\textbf{  0.48}}/  0.08 & \textcolor{blue}{\textbf{  0.52}}/  0.09 \\
 258-statlog heart & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.06}} &   0.49/  0.07 &   0.48/\textcolor{black}{\textbf{  0.06}} &   0.49/  0.08 & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.50}}/  0.07 & \textcolor{blue}{\textbf{  0.50}}/  0.07 & \textcolor{red}{\textbf{  0.45}}/  0.07 & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.06}} &   0.49/\textcolor{black}{\textbf{  0.06}} &   0.49/\textcolor{darkgreen}{\textbf{  0.05}} \\
@@ -629,7 +629,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 257-statlog heart &  \\
 258-statlog heart &  \\
@@ -666,7 +666,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{HTUmah} & \textbf{SGmulti} & Ent & Mar & DWmah & TUmah & EERacu & EERent\\ \hline 289-thyroid hypothyroi... &   0.35/  0.10 &   0.33/  0.12 & \textcolor{blue}{\textbf{  0.38}}/  0.10 & \textcolor{blue}{\textbf{  0.38}}/  0.10 &   0.35/  0.10 & \textcolor{red}{\textbf{  0.10}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{red}{\textbf{  0.10}}/\textcolor{black}{\textbf{  0.08}} &   0.21/  0.22 &   0.20/  0.16 &   0.30/  0.11 &   0.27/  0.15 \\
 290-thyroid hypothyroi... &   0.46/  0.10 &   0.51/  0.18 &   0.42/\textcolor{black}{\textbf{  0.08}} &   0.49/  0.11 &   0.47/  0.11 &   0.52/  0.10 &   0.52/  0.10 & \textcolor{red}{\textbf{  0.00}}/\textcolor{darkgreen}{\textbf{  0.00}} &   0.49/  0.11 & \textcolor{black}{\textbf{  0.64}}/  0.11 & \underline{\textcolor{blue}{\textbf{  0.66}}}/  0.13 \\
@@ -703,7 +703,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 289-thyroid hypothyroi... &  \\
 290-thyroid hypothyroi... &  \\
@@ -740,7 +740,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{HTUmah} & \textbf{SGmulti} & Ent & Mar & DWmah & TUmah & EERacu & EERent\\ \hline 321-vertebra column 2c & \textcolor{black}{\textbf{  0.49}}/  0.07 &   0.48/  0.08 &   0.46/  0.08 &   0.46/  0.08 & \textcolor{black}{\textbf{  0.49}}/  0.07 &   0.43/\textcolor{black}{\textbf{  0.06}} &   0.43/\textcolor{black}{\textbf{  0.06}} & \underline{\textcolor{blue}{\textbf{  0.52}}}/\textcolor{black}{\textbf{  0.06}} &   0.44/  0.07 & \textcolor{red}{\textbf{  0.42}}/  0.10 &   0.44/  0.07 \\
 322-vertebra column 2c &   0.51/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.07}} &   0.51/\textcolor{black}{\textbf{  0.07}} & \textcolor{black}{\textbf{  0.52}}/  0.08 &   0.50/\textcolor{black}{\textbf{  0.07}} &   0.50/\textcolor{black}{\textbf{  0.07}} &   0.50/\textcolor{black}{\textbf{  0.07}} &   0.50/\textcolor{black}{\textbf{  0.07}} &   0.50/\textcolor{black}{\textbf{  0.07}} &   0.50/  0.08 & \underline{\textcolor{blue}{\textbf{  0.53}}}/\textcolor{darkgreen}{\textbf{  0.06}} \\
@@ -777,7 +777,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 321-vertebra column 2c &  \\
 322-vertebra column 2c &  \\
@@ -814,7 +814,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: Os maiores valores da mÈdia e desvio padr„o de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Os menores valores de desvio padr„o est„o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: Os maiores valores da m√©dia e desvio padr√£o de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Os menores valores de desvio padr√£o est√£o em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUmah} & \textbf{HTUmah} & \textbf{SGmulti} & Ent & Mar & DWmah & TUmah & EERacu & EERent\\ \hline 353-wdbc &   0.85/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.87}}/  0.04 &   0.86/  0.04 &   0.86/  0.04 &   0.85/\textcolor{black}{\textbf{  0.03}} &   0.84/  0.04 &   0.84/  0.04 & \textcolor{red}{\textbf{  0.72}}/  0.06 & \textcolor{blue}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.03}} &   0.81/  0.05 & \textcolor{blue}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.03}} \\
 354-wdbc &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.77/  0.04 & \textcolor{black}{\textbf{  0.78}}/\textcolor{black}{\textbf{  0.03}} &   0.77/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.78}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.78}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.51}}/  0.05 & \underline{\textcolor{blue}{\textbf{  0.79}}}/  0.04 &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.77/\textcolor{black}{\textbf{  0.03}} \\
@@ -843,7 +843,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para todos aprendizes half: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{l}
  & \\ \hline 353-wdbc &  \\
 354-wdbc &  \\
